Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I03ffa7bee3eaee3fd10457ed178b46757586778a

Former-commit-id: ace1b2338ff368acc2a9e709af47831d9f255d20

--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Моделът на лицето ви ще бъде изтрит надеждно и за постоянно.\n\nСлед това ще имате нужда от ПИН кода, фигурата или паролата си, за да отключвате телефона си."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Използвайте функцията „Отключване с лице“, за да отключвате телефона си"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Отпечатък"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Отпечатък за служ. цели"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Добавяне на отпечатък"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -488,6 +490,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Вече можете да използвате отпечатъка си, за да отключвате таблета или да потвърждавате самоличността си, например при влизане в приложения"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Вече можете да използвате отпечатъка си, за да отключвате устройството или да потвърждавате самоличността си, например при влизане в приложения"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Вече можете да използвате отпечатъка си, за да отключвате телефона или да потвърждавате самоличността си, например при влизане в приложения"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"По-късно"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Вдигнете пръст и докоснете отново"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Поставете едната страна на пръста си върху сензора и задръжте, след това поставете другата"</string>
@@ -795,8 +803,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Увеличаване на нивото на регистриране за стека за NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Подробен рег. файл (NFC) за отстр. на грешки за доставчиците"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Включване на допълнителни регистрационни файлове за доставчиците на конкретни устройства в сигналите за програмни грешки, които може да съдържат лична информация."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"Нефилтриран регистрационен файл за NFC от NCI"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Запис на подробни NFC пакети, които може да съдържат лична информация."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Да се рестартира ли устройството?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Подробното записване в регистрационни файлове посредством NFC е предназначено само за програмни цели. В сигналите за програмни грешки, които може да съдържат лична информация, са включени допълнителни данни от NFC. За да промените тази настройка, рестартирайте устройството си."</string>
@@ -1183,6 +1190,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Не е налице, защото режимът „Време за сън“ е вкл."</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Използване на скрийнсейвър"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"При зареждане или връзка с докинг станция"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"При зареждане"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"При свързване с докинг станция"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Никога"</string>
@@ -1471,8 +1480,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Споделете връзката с интернет на телефона през Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Тетъринг чрез Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Споделете връзката с интернет на телефона чрез Ethernet"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Споделете връзката с интернет на таблета през Ethernet"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Използвайте точка за достъп и тетъринг, за да предоставите достъп до интернет на други устройства чрез мобилната си връзка за данни. Приложенията могат също да създават точки за достъп, за да споделят съдържание с устройства в близост."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Използвайте точка за достъп и тетъринг, за да предоставите достъп до интернет на други устройства чрез Wi-Fi или мобилната си връзка за данни. Приложенията могат също да създават точки за достъп, за да споделят съдържание с устройства в близост."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Помощ"</string>
@@ -2943,10 +2951,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (препоръчително)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS съобщения"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Изпращане и получаване при изключени мобилни данни"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Автоматично превключване на мрежата за мобилни данни"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Временно използване на тази мрежа, когато осигурява по-добри условия за обаждания и достъп до интернет"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Служебна SIM карта"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Достъп до прилож. и съдържанието"</string>
     <string name="user_rename" msgid="8735940847878484249">"ПРЕИМЕНУВАНЕ"</string>
@@ -3458,6 +3464,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"По ваша заявка Android блокира показването на известията от това приложение на устройството"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"По ваша заявка Android блокира показването на тази категория известия на устройството"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"По ваша заявка Android блокира показването на тази група известия на устройството"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"Категории"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Други"</string>
     <string name="no_channels" msgid="4716199078612071915">"Все още няма публикувани известия от това приложение"</string>
@@ -3879,8 +3887,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Блокирано от доставчика на кредити"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Необходим е родител"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Дайте телефона на родителя си, за да стартира настройването"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Дайте телефона на родителя си, за да разреши промяната на тази настройка."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"За повече информация се свържете със системния администратор"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Още подробности"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Администраторът ви може да наблюдава и управлява приложенията и данните, свързани със служебния ви потребителски профил, включително настройките, разрешенията, корпоративния достъп, мрежовата активност и информацията за местоположението на устройството."</string>
@@ -4677,10 +4684,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Промяна"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Свързано"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Установена е временна връзка"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"Временно се използва <xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Няма връзка"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Връзката за мобилни данни няма да е автоматична"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Да се изключат ли мобилните данни?"</string>
@@ -4765,7 +4770,10 @@
     <string name="tare_balances" msgid="731881382594747961">"Баланси"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Ограничения за потреблението"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Първоначално ограничение за потреблението"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Максимално ограничение за потреблението"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"Модификатори"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Действия (цена за извършване)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Действия (основна цена)"</string>
