--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"आपके चेहरे का मॉडल सुरक्षित तरीके से हमेशा के लिए मिटा दिया जाएगा.\n\nइसके मिटने के बाद, अपने फ़ोन को अनलॉक करने के लिए, आपको पिन, पैटर्न या पासवर्ड का इस्तेमाल करना होगा."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"फ़ोन अनलॉक करने के लिए, फ़ेस अनलॉक की सुविधा का इस्तेमाल करें"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"उंगली की छाप"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"वर्क प्रोफ़ाइल के लिए फ़िंगरप्रिंट"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"फ़िंगरप्रिंट जोड़ें"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"अब अपने फ़िंगरप्रिंट की मदद से, टैबलेट को अनलॉक किया जा सकता है. इसके अलावा, किसी ऐप्लिकेशन में साइन इन करने या ऐसे और काम करने के दौरान, अपनी पहचान की पुष्टि करने के लिए भी फ़िंगरप्रिंट का इस्तेमाल किया जा सकता है"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"अब अपने फ़िंगरप्रिंट की मदद से, डिवाइस को अनलॉक किया जा सकता है. इसके अलावा, किसी ऐप्लिकेशन में साइन इन करने या ऐसे और काम करने के दौरान, अपनी पहचान की पुष्टि करने के लिए भी फ़िंगरप्रिंट का इस्तेमाल किया जा सकता है"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"अब अपने फ़िंगरप्रिंट की मदद से, फ़ोन को अनलॉक किया जा सकता है. इसके अलावा, किसी ऐप्लिकेशन में साइन इन करने या ऐसे और काम करने के दौरान, अपनी पहचान की पुष्टि करने के लिए भी फ़िंगरप्रिंट का इस्तेमाल किया जा सकता है"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"इसे बाद में करें"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"हटाएं, फिर दोबारा छुएं"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"पहले अपनी उंगली के एक किनारे को सेंसर पर कुछ देर के लिए रखें और फिर दूसरी तरफ़ से भी ऐसा करें"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"एनएफ़सी स्टैक को लॉग करने का लेवल बढ़ाएं"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"एनएफ़सी वर्बोस वेंडर डीबग लॉग"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"गड़बड़ी की जानकारी वाली रिपोर्ट में, खास तौर पर डिवाइस से जुड़े वेंडर लॉग शामिल करें. इसमें निजी जानकारी भी शामिल हो सकती है."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"एनएफ़सी के NCI का लॉग, जिसे फ़िल्टर नहीं किया गया है"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"पूरी जानकारी वाले एनएफ़सी पैकेट कैप्चर करें. इसमें निजी जानकारी भी शामिल हो सकती है."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"क्या आपको डिवाइस रीस्टार्ट करना है?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"एनएफ़सी का लाॅग सिर्फ़ डेवलपमेंट के मकसद से बनाया गया है. गड़बड़ी की रिपोर्ट में एनएफ़सी का अतिरिक्त डेटा शामिल होता है. इसमें निजी जानकारी भी शामिल हो सकती है. इस सेटिंग को बदलने के लिए, डिवाइस को रीस्टार्ट करें."</string>
@@ -1177,6 +1184,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"बेडटाइम मोड चालू होने पर यह सुविधा काम नहीं करती"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"स्क्रीन सेवर का इस्तेमाल करें"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"चार्ज करते समय या डॉक किए होने पर"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"डॉक और चार्ज होने के दौरान"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"चार्ज करते समय"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"जब डॉक किया हुआ हो"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"कभी नहीं"</string>
@@ -1465,8 +1473,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ब्लूटूथ से फ़ोन का इंटरनेट कनेक्शन शेयर करें"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ईथरनेट टेदरिंग"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ईथरनेट से फ़ोन का इंटरनेट कनेक्शन शेयर करें"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ईथरनेट का इस्तेमाल करके टैबलेट का इंटरनेट कनेक्शन शेयर करें"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"अपने मोबाइल डेटा कनेक्शन से, दूसरे डिवाइस को इंटरनेट देने के लिए हॉटस्पॉट और टेदरिंग का इस्तेमाल करें. आस-पास के डिवाइस के साथ कॉन्टेंट शेयर करने के लिए, ऐप्लिकेशन भी हॉटस्पॉट बना सकते हैं."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"दूसरे डिवाइस के साथ अपना वाई-फ़ाई और मोबाइल डेटा कनेक्शन शेयर करने के लिए हॉटस्पॉट और टेदरिंग का इस्तेमाल करें. आस-पास के डिवाइस के साथ कॉन्टेंट शेयर करने के लिए, ऐप्लिकेशन भी हॉटस्पॉट बना सकते हैं."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"सहायता"</string>
@@ -2937,10 +2944,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (सुझाया गया)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"मल्टीमीडिया मैसेज (एमएमएस)"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"मोबाइल डेटा बंद होने पर मल्टीमीडिया मैसेज (एमएमएस) भेजें और पाएं"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"मोबाइल डेटा के हिसाब से अपने-आप स्विच करें"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"जब सिम, कॉल और इंटरनेट के लिए बेहतर नेटवर्क उपलब्ध कराता है, तब कुछ समय के लिए इस नेटवर्क का इस्तेमाल करें"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"दफ़्तर सिम"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"ऐप और सामग्री तक पहुंच"</string>
     <string name="user_rename" msgid="8735940847878484249">"नाम बदलें"</string>
@@ -3452,6 +3457,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"आपके अनुरोध पर, Android इस ऐप्लिकेशन की सूचनाओं को इस डिवाइस पर आने से रोक रहा है"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"आपके अनुरोध पर, Android इस श्रेणी की सूचनाओं को इस डिवाइस पर आने से रोक रहा है"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"आपके अनुरोध पर, Android इस तरह की सूचनाओं को इस डिवाइस पर आने से रोक रहा है"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"यह ऐप्लिकेशन सूचनाएं नहीं भेजता"</string>
     <string name="notification_channels" msgid="1502969522886493799">"कैटगरी"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"अन्य"</string>
     <string name="no_channels" msgid="4716199078612071915">"इस ऐप्लिकेशन ने कोई भी सूचना पोस्ट नहीं की है"</string>
@@ -3873,8 +3879,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"क्रेडिट देने वाली कंपनी ने ब्लॉक किया है"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"माता-पिता की अनुमति ज़रूरी है"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"बायोमेट्रिक्स के ज़रिए पुष्टि करने की सुविधा सेट अप करने के लिए, अपने माता-पिता की मदद लें"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"इस सेटिंग को बदलने के लिए, अपने माता-पिता की अनुमति लें."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"ज़्यादा जानकारी के लिए, अपने आईटी एडमिन से संपर्क करें"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"ज़्यादा जानकारी"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"आपका एडमिन आपकी वर्क प्रोफ़ाइल से जुड़े ऐप और डेटा की निगरानी और उनका प्रबंधन कर सकता है, जिनमें सेटिंग, अनुमतियां, कॉर्पोरेट पहुंच, नेटवर्क गतिविधि और डिवाइस के जगह की जानकारी शामिल हैं."</string>
@@ -4671,10 +4676,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"बदलें"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"कनेक्ट हो गया"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"इंटरनेट कनेक्शन कुछ समय के लिए है"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"कुछ समय के लिए <xliff:g id="SUBNAME">%1$s</xliff:g> का इंटरनेट इस्तेमाल किया जा रहा है"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"इंटरनेट कनेक्शन नहीं है"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"मोबाइल डेटा अपने-आप कनेक्ट नहीं होगा"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"क्या आप मोबाइल डेटा बंद करना चाहते हैं?"</string>
@@ -4759,7 +4762,8 @@
     <string name="tare_balances" msgid="731881382594747961">"बैलेंस"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"इस्तेमाल करने की सीमा"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"इस्तेमाल करने की शुरुआती सीमा"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"इस्तेमाल करने की मैक्सिमम लिमिट"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"इस्तेमाल करने की मिनिमम लिमिट"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"इस्तेमाल करने की मैक्सिमम लिमिट"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"मॉडिफ़ायर"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"कार्रवाइयां (हर कार्रवाई के लिए खर्च होने वाले क्रेडिट)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"कार्रवाइयां (मूल कीमत)"</string>
