--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"គំរូមុខ​របស់អ្នក​នឹងត្រូវលុប​ដោយសុវត្ថិភាព​ជាអចិន្ត្រៃយ៍។\n\nបន្ទាប់ពី​លុបហើយ អ្នកនឹង​ត្រូវការកូដ PIN, លំនាំ ឬពាក្យសម្ងាត់​របស់អ្នក ដើម្បីដោះសោ​ទូរសព្ទ​របស់អ្នក។"</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"ប្រើ​ការដោះសោ​តាមទម្រង់​មុខ ដើម្បី​ដោះសោ​ទូរសព្ទរបស់អ្នក"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"ស្នាមម្រាមដៃ"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"ស្នាមម្រាមដៃសម្រាប់ការងារ"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"បញ្ចូល​ស្នាមម្រាមដៃ"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"ឥឡូវនេះ អ្នកអាចប្រើ​ស្នាមម្រាមដៃ​របស់អ្នក ដើម្បីដោះសោ​ថេប្លេតរបស់អ្នក ឬផ្ទៀងផ្ទាត់ថាជាអ្នក ដូចជា នៅពេលអ្នក​ចូលកម្មវិធីជាដើម"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"ឥឡូវនេះ អ្នកអាចប្រើ​ស្នាមម្រាមដៃ​របស់អ្នក ដើម្បីដោះសោឧបករណ៍របស់អ្នក ឬផ្ទៀងផ្ទាត់ថាជាអ្នក ដូចជា នៅពេលអ្នក​ចូលកម្មវិធីជាដើម"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"ឥឡូវនេះ អ្នកអាចប្រើ​ស្នាមម្រាមដៃ​របស់អ្នក ដើម្បីដោះសោ​ទូរសព្ទរបស់អ្នក ឬផ្ទៀងផ្ទាត់ថាជាអ្នក ដូចជា នៅពេលអ្នក​ចូលកម្មវិធីជាដើម"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"ធ្វើ​នៅ​ពេលក្រោយ"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"ដកចេញ រួចចុច​ម្តងទៀត"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"ដាក់​ផ្នែកចំហៀង​នៃស្នាមម្រាមដៃ​របស់អ្នក​នៅលើ​ឧបករណ៍​ចាប់ស្នាមម្រាមដៃ​ឱ្យជាប់ រួចប្ដូរទៅ​ផ្នែកម្ខាងទៀត"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"បង្កើន​កម្រិតធ្វើ​កំណត់ហេតុ​គំនរ NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"កំណត់ហេតុជួសជុល​រៀបរាប់អំពី​អ្នកផ្គត់ផ្គង់ NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"រួមបញ្ចូល​កំណត់ហេតុបន្ថែម​អំពីអ្នកផ្គត់ផ្គង់​សម្រាប់ឧបករណ៍ជាក់លាក់​នៅក្នុងរបាយការណ៍អំពីបញ្ហា ដែលអាច​មានព័ត៌មានឯកជន។"</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"កំណត់ហេតុដែលមិនបានត្រងនៃ NFC NCI"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"ចាប់យកកញ្ចប់ NFC លម្អិត​ដែលអាចមានព័ត៌មានឯកជន។"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"ចាប់ផ្តើម​ឧបករណ៍​ឡើង​វិញ​ឬ?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"ការកត់ត្រា NFC លម្អិត​គឺសម្រាប់តែការអភិវឌ្ឍប៉ុណ្ណោះ។ ទិន្នន័យ NFC បន្ថែម​ត្រូវបានរួមបញ្ចូល​ក្នុងរបាយការណ៍អំពីបញ្ហា​ដែលអាចមានព័ត៌មានឯកជន។ ចាប់ផ្ដើមឧបករណ៍​របស់អ្នក​ឡើងវិញ ដើម្បីប្ដូរ​ការកំណត់នេះ។"</string>
@@ -1177,6 +1184,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"មិនអាច​ប្រើបានទេ ដោយសារ​បើកមុខងារ​ម៉ោងគេង"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"ប្រើធាតុ​រក្សា​អេក្រង់"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ពេលសាកថ្ម ឬភ្ជាប់"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ពេលសាកថ្ម"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"ពេល​​ភ្ជាប់"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"កុំឲ្យសោះ"</string>
@@ -1465,8 +1474,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ចែក​រំលែក​ការ​ភ្ជាប់​អ៊ីនធឺណិត​របស់ទូរសព្ទ​តាមរយៈប៊្លូធូស"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ការ​ភ្ជាប់អ៊ីសឺរណិត"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ចែករំលែកការតភ្ជាប់អ៊ីនធឺណិតរបស់ទូរសព្ទតាមរយៈអ៊ីសឺរណិត"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ចែក​រំលែក​ការត​ភ្ជាប់​អ៊ីនធឺណិត​របស់ថេប្លេត​តាមរយៈអ៊ីសឺរណិត"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"ប្រើហតស្ប៉ត និងការភ្ជាប់ ដើម្បីផ្តល់អ៊ីនធឺណិតដល់ឧបករណ៍ផ្សេងទៀតតាមរយៈការភ្ជាប់ទិន្នន័យទូរសព្ទចល័តរបស់អ្នក។ កម្មវិធីក៏អាចបង្កើតហតស្ប៉ត ដើម្បីចែករំលែកខ្លឹមសារជាមួយឧបករណ៍ដែលនៅជិតផងដែរ។"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"ប្រើ​ហតស្ប៉ត និង​ការភ្ជាប់ ដើម្បី​ផ្តល់​អ៊ីនធឺណិត​ដល់​ឧបករណ៍​ផ្សេងទៀត​តាមរយៈ​ការតភ្ជាប់ Wi-Fi ឬ​ទិន្នន័យ​ទូរសព្ទ​ចល័ត​របស់​អ្នក។ កម្មវិធី​ក៏​អាច​បង្កើត​ហតស្ប៉ត ដើម្បី​ចែករំលែក​ខ្លឹមសារ​ជាមួយ​ឧបករណ៍​ដែល​នៅជិត​បាន​ផងដែរ។"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"ជំនួយ"</string>
@@ -2937,10 +2945,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (បាន​ណែនាំ)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"សារ MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"ផ្ញើ និង​ទទួលសារ នៅពេល​បិទ​ទិន្នន័យ​ទូរសព្ទចល័ត"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"ប្ដូរទិន្នន័យទូរសព្ទចល័តដោយស្វ័យប្រវត្តិ"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"ប្រើបណ្ដាញនេះជាបណ្ដោះអាសន្ន នៅពេលបណ្ដាញនេះអាចប្រើបានកាន់តែប្រសើរសម្រាប់ការហៅទូរសព្ទ និងអ៊ីនធឺណិត"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"ស៊ីម​ការងារ"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"កម្មវិធី &amp; កា​រ​ចូល​ប្រើ​មាតិកា"</string>
     <string name="user_rename" msgid="8735940847878484249">"ប្ដូរ​ឈ្មោះ"</string>
@@ -3452,6 +3458,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"តាមសំណើ​របស់អ្នក Android កំពុង​ទប់ស្កាត់​ការជូនដំណឹង​របស់កម្មវិធី​នេះ​មិន​ឱ្យ​បង្ហាញ​នៅលើ​ឧបករណ៍​នេះទេ"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"តាមសំណើ​របស់អ្នក ប្រព័ន្ធ​ប្រតិបត្តិការ Android កំពុង​ទប់ស្កាត់​ប្រភេទនៃការជូនដំណឹង​​នេះ​មិន​ឱ្យ​បង្ហាញ​នៅលើ​ឧបករណ៍​នេះទេ"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"តាមសំណើ​របស់អ្នក ប្រព័ន្ធ​ប្រតិបត្តិការ Android កំពុង​ទប់ស្កាត់​ក្រុមនៃ​ការជូនដំណឹង​នេះ​មិន​ឱ្យ​បង្ហាញ​នៅលើ​ឧបករណ៍​នេះទេ"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"ប្រភេទ"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"ផ្សេងៗ"</string>
     <string name="no_channels" msgid="4716199078612071915">"កម្មវិធី​នេះ​មិន​បាន​បង្ហោះ​ការជូនដំណឹង​ណាមួយ​ឡើយ"</string>
@@ -3873,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"បានទប់ស្កាត់ដោយក្រុមហ៊ុនផ្ដល់សេវាឥណទានរបស់អ្នក"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"ត្រូវយល់ព្រម​ពីមាតាបិតា"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"ឱ្យ​ទូរសព្ទ​ទៅមាតាបិតា​របស់អ្នក ដើម្បីចាប់ផ្ដើម​រៀបចំ​ការផ្ទៀងផ្ទាត់​នេះ"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"ប្រគល់ទូរសព្ទឱ្យមាតាបិតារបស់អ្នក ដើម្បីអនុញ្ញាតឱ្យផ្លាស់ប្ដូរការកំណត់នេះ។"</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"ដើម្បីទទួលបានព័ត៌មានបន្ថែម សូមទាក់ទងទៅអ្នកគ្រប់គ្រង​ផ្នែកព័ត៌មានវិទ្យារបស់អ្នក"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"ព័ត៌មានលម្អិតបន្ថែម"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"អ្នកគ្រប់គ្រង​របស់អ្នក​អាច​តាមដាន និងគ្រប់គ្រងកម្មវិធី និងទិន្នន័យដែលពាក់ព័ន្ធជាមួយកម្រង​ព័ត៌មាន​ការងារ​របស់អ្នក ដោយរាប់បញ្ចូលទាំងការកំណត់ ការអនុញ្ញាត ការចូលលក្ខណៈក្រុមហ៊ុន សកម្មភាពបណ្តាញ និងព័ត៌មានអំពីទីតាំងរបស់ឧបករណ៍នេះផងដែរ។"</string>
@@ -4671,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"ផ្លាស់ប្ដូរ"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"បានភ្ជាប់"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"បានភ្ជាប់ជាបណ្ដោះអាសន្ន"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"ប្រើ <xliff:g id="SUBNAME">%1$s</xliff:g> ជាបណ្ដោះអាសន្ន"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"មិនមាន​ការតភ្ជាប់ទេ"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"ទិន្នន័យទូរសព្ទចល័ត​នឹងមិនភ្ជាប់ដោយស្វ័យប្រវត្តិទេ"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"បិទទិន្នន័យ​ទូរសព្ទចល័តឬ?"</string>
@@ -4759,7 +4764,10 @@
     <string name="tare_balances" msgid="731881382594747961">"សមតុល្យ"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"ដែនកំណត់​ការប្រើប្រាស់"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"ដែនកំណត់​ការប្រើប្រាស់​លើកដំបូង"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"ដែនកំណត់​ការប្រើប្រាស់​អតិបរមា"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"ឧបករណ៍កែសម្រួល"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"សកម្មភាព (ថ្លៃផលិត)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"សកម្មភាព (តម្លៃគោល)"</string>
