--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -363,6 +363,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Модель вашего лица будет удалена навсегда.\n\n После этого для разблокировки телефона будет требоваться PIN-код, пароль или графический ключ."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Используйте фейсконтроль для разблокировки телефона"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Отпечатки пальцев"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Отпечаток для работы"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Добавить отпечаток пальца"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -490,6 +492,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Теперь вы можете использовать отпечаток пальца, чтобы разблокировать планшет или подтверждать свою личность для входа в приложения и других действий."</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Теперь вы можете использовать отпечаток пальца, чтобы разблокировать устройство или подтверждать свою личность для входа в приложения и других действий."</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Теперь вы можете использовать отпечаток пальца, чтобы разблокировать телефон или подтверждать свою личность для входа в приложения и других действий."</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Не сейчас"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Поднимите палец и снова приложите его к сканеру"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Наклоните палец вбок, приложите к датчику и удерживайте. Затем наклоните палец в противоположную сторону и повторите действия."</string>
@@ -565,8 +573,8 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Вы уже добавили максимальное количество отпечатков"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Больше нельзя добавить отпечатки пальцев"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Удаление отпечатка пальца \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\""</string>
-    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Изображения и модель отпечатка \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" будут удалены с телефона."</string>
-    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Изображения и модель отпечатка \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" будут удалены с планшета."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Изображения и модель отпечатка \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" будут удалены с телефона"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Изображения и модель отпечатка \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" будут удалены с планшета"</string>
     <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Изображения и модель отпечатка \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" будут удалены с устройства."</string>
     <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Вы больше не сможете использовать отпечаток пальца для разблокировки телефона и подтверждения своей личности в приложениях."</string>
     <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Вы больше не сможете использовать отпечаток пальца для разблокировки планшета и подтверждения личности в приложениях."</string>
@@ -823,8 +831,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Ведение подробного журнала стека NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Подробный журнал отладки NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Включать в отчеты об ошибках дополнительные записи поставщика об устройстве, которые могут содержать конфиденциальную информацию"</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"Журнал NFC NCI без фильтрации"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Сохранять пакеты NFC, которые могут содержать конфиденциальную информацию"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Перезапустить устройство?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Подробный журнал NFC ведется только в целях разработки. Дополнительные данные NFC будут включены в отчеты об ошибках и могут содержать конфиденциальную информацию. Чтобы изменить этот параметр, перезапустите устройство."</string>
@@ -1217,6 +1224,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Недоступно в ночном режиме"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Использовать заставку"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Во время зарядки и на док-станции"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Во время зарядки"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"На док-станции"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Никогда"</string>
@@ -1507,8 +1516,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Открыть доступ к интернет-подключению телефона через Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-модем"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Открыть доступ к интернет-подключению телефона через Ethernet"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Открыть доступ к интернет-подключению планшета через Ethernet"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Точка доступа и режим модема позволяют подключать другие устройства к интернету через мобильную сеть. Приложения также могут создавать точки доступа, чтобы вы могли делиться контентом с устройствами поблизости."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Точка доступа и режим модема позволяют подключать другие устройства к интернету через Wi-Fi или мобильную сеть. Приложения также могут создавать точки доступа, чтобы вы могли делиться контентом с устройствами поблизости."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Справка"</string>
@@ -3019,10 +3027,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (рекомендуется)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-сообщения"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Получать и отправлять MMS-сообщения, когда передача данных по мобильной сети отключена"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Переключать мобильный интернет автоматически"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Временно использовать эту сеть для звонков и подключения к интернету, если основная сеть недоступна"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Рабочая SIM-карта"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Доступ к контенту и приложениям"</string>
     <string name="user_rename" msgid="8735940847878484249">"ПЕРЕИМЕНОВАТЬ"</string>
@@ -3542,6 +3548,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Вы отключили уведомления от этого приложения."</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Вы отключили уведомления этой категории."</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Вы отключили эту группу уведомлений"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"Категории"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Другие"</string>
     <string name="no_channels" msgid="4716199078612071915">"Это приложение не отправляло уведомлений."</string>
@@ -3985,8 +3993,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Заблокировано организацией, предоставившей кредит"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Нужна помощь родителя"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Чтобы настроить эту функцию, попроси родителя тебе помочь."</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Чтобы изменить этот параметр, попроси родителя тебе помочь."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Чтобы узнать подробности, обратитесь к своему администратору"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Подробнее…"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Администратор может контролировать настройки, приложения, разрешения и параметры доступа к корпоративным ресурсам в этом профиле, а также связанные с ним данные, например сведения о местоположении или действиях в сети."</string>
@@ -4807,10 +4814,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Изменить настройки"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Подключено"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Временное подключение"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"Временно используется сеть оператора \"<xliff:g id="SUBNAME">%1$s</xliff:g>\""</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Нет подключения"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Без автоподключения к мобильному интернету"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Отключить мобильный интернет?"</string>
@@ -4895,7 +4900,10 @@
     <string name="tare_balances" msgid="731881382594747961">"Баланс"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Ограничение потребления"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Начальное ограничение потребления"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Максимальное ограничение потребления"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"Модификаторы"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Действия (затраты на выполнение)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Действия (базовые затраты)"</string>
