--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"ඔබගේ මුහුණු ආකෘතිය ස්ථිරව සහ ආරක්ෂිතව මකනු ඇත.\n\nමැකීමෙන් පසුව, ඔබගේ දුරකථනය අගුලු හැරීමට ඔබට ඔබගේ PIN, රටාව හෝ මුරපදය අවශ්‍ය වනු ඇත."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"ඔබගේ දුරකථනය අගුලු හැරීමට මුහුණෙන් අගුළු හැරීම භාවිත කරන්න"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"ඇඟිලි සලකුණ"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"කාර්යාලය සඳහා ඇඟිලි සලකුණ"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"ඇඟිලි සලකුණ එක් කරන්න"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"දැන් ඔබට ඔබගේ ටැබ්ලටය අගුලු හැරීමට හෝ ඔබ යෙදුම්වලට පුරන විට වැනි අවස්ථාවල, ඒ ඔබ බව සත්‍යාපනය කිරීමට ඔබගේ ඇඟිලි සලකුණ භාවිත කළ හැකිය"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"දැන් ඔබට ඔබගේ උපාංගය අගුලු හැරීමට හෝ ඔබ යෙදුම්වලට පුරන විට වැනි අවස්ථාවල, ඒ ඔබ බව සත්‍යාපනය සකිරීමට ඔබගේ ඇඟිලි සලකුණ භාවිත කළ හැකිය"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"දැන් ඔබට ඔබගේ දුරකථනය අගුලු හැරීමට හෝ ඔබ යෙදුම්වලට පුරන විට වැනි අවස්ථාවල, ඒ ඔබ බව සත්‍යාපනය සකිරීමට ඔබගේ ඇඟිලි සලකුණ භාවිත කළ හැකිය"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"පසුව එය කරන්න"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"ඔසවා, පසුව නැවත ස්පර්ශ කරන්න"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"ඔබගේ ඇඟිලි සලකුණුණෙහි පැත්ත සංවේදකය මත තබා අල්ලාගෙන සිටින්න, අනතුරුව අනෙක් පැත්තට මාරු කරන්න"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC අට්ටි ලොග මට්ටම වැඩි කරන්න"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC වාචික විකුණුම්කරු නිදොස් කිරීමේ ලොගය"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"පෞද්ගලික තොරතුරු අඩංගු විය හැකි, දෝෂ වාර්තා තුළ අතිරේක උපාංග-විශේෂිත විකුණුම් ලොග ඇතුළත් කරන්න."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC NCI නොපෙරන ලද ලොගය"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"පෞද්ගලික තොරතුරු අඩංගු විය හැකි, විස්තර NFC පැකට් ග්‍රහණය කරන්න."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"උපාංගය යළි අරඹන්න ද?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"විස්තර NFC ලොග් කිරීම සංවර්ධන අරමුණු සඳහා පමණක් අදහස් කරයි. පෞද්ගලික තොරතුරු අඩංගු විය හැකි, දෝෂ වාර්තාවල අතිරේක NFC දත්ත ඇතුළත් වේ. මෙම සැකසීම වෙනස් කිරීමට ඔබේ උපාංගය යළි අරඹන්න."</string>
@@ -1177,6 +1184,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"නිදන කාල ප්‍රකාරය ක්‍රියාත්මක නිසා ලබා ගත නොහැක"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"තිර සුරැකුම භාවිත කරන්න"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ආරෝපණය හෝ ඩොක් කර ඇති විට"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ආරෝපණය වන අතරතුර"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"ඩොක් කර ඇති විට"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"කවදාවත් නෑ"</string>
@@ -1465,8 +1474,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"බ්ලූටූත් හරහා දුරකථනයේ අන්තර්ජාල සබැඳුම බෙදා ගන්න"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ඊතර්නෙට් ටෙදරින්"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ඊතර්නෙට් හරහා දුරකථනයේ අන්තර්ජාල සබැඳුම බෙදා ගන්න"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ඊතර්නෙට් හරහා ටැබ්ලට් පරිගණකයේ අන්තර්ජාල සබැඳුම බෙදා ගන්න"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"ඔබගේ ජංගම දත්ත සබැඳුම හරහා වෙනත් උපාංග සඳහා අන්තර්ජාලය සැපයීමට හොට්ස්පොට් හා ටෙදරින් භාවිත කරන්න. යෙදුම් අවට උපාංග සමග අන්තර්ගතය බෙදා ගැනීමට හොට්ස්පොට් එකක්ද සෑදිය හැකිය."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"ඔබේ Wi-Fi හෝ ජංගම දත්ත සම්බන්ධතාව හරහා අනෙක් උපාංගවලට අන්තර්ජාලය ලබා දීමට හොට්ස්පොට් සහ ටෙදරින් භාවිත කරන්න. අවට උපාංග සමඟ අන්තර්ගත බෙදා ගැනීමට හොට්ස්පොට් එකක් තැනීමට ද යෙදුම්වලට හැකිය."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"උදවු"</string>
@@ -2937,10 +2945,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (නිර්දෙශිත)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS පණිවිඩ"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"ජංගම දත්ත ක්‍රියා විරහිත විට යවන්න සහ ලබන්න"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"ජංගම දත්ත ස්වයංක්‍රීයව මාරු කරන්න"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"මෙම ජාලයට ඇමතුම් සහ අන්තර්ජාලය සඳහා වඩා හොඳ ලබා ගත හැකි වීම ඇති විට මෙය තාවකාලිකව භාවිත කරන්න"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"වැඩ කරන SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"යෙදුම සහ අන්තර්ගත ප්‍රවේශය"</string>
     <string name="user_rename" msgid="8735940847878484249">"නැවත නම් කරන්න"</string>
@@ -3452,6 +3458,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"ඔබගේ ඉල්ලීම මත, Android මෙම යෙදුමෙහි දැනුම්දීම් මෙම උපාංගය මත දිස් වීම අවහිර කරමින් ඇත"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"ඔබගේ ඉල්ලීම මත, Android මෙම දැනුම්දීම් ප්‍රවර්ගය මෙම උපාංගය මත දිස් වීම අවහිර කරමින් ඇත"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"ඔබගේ ඉල්ලීම මත, Android මෙම දැනුම්දීම් සමූහය මෙම උපාංගය මත දිස් වීම අවහිර කරමින් ඇත"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"ප්‍රවර්ග"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"වෙනත්"</string>
     <string name="no_channels" msgid="4716199078612071915">"මෙම යෙදුම දැනුම්දීම් කිසිවක් පළ කර නැත"</string>
@@ -3873,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"ඔබගේ ණය සැපයුම්කරු විසින් අවහිර කරන ලදි."</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"මාපියකු අවශ්‍යයි"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"මෙය පිහිටුවීම ආරම්භ කිරීම සඳහා දුරකථනය ඔබගේ මාපියන්ගෙන් කෙනෙකුට භාර දෙන්න"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"මෙම සැකසීම වෙනස් කිරීමට ඉඩ දීමට දුරකථනය ඔබේ මාපියන්ට දෙන්න."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"වැඩි විස්තර සඳහා, ඔබේ IT පරිපාලක අමතන්න"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"වැඩි විස්තර"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"සැකසීම්, අවසර, සංස්ථාපිත ප්‍රවේශය, ජාල ක්‍රියාකාරකම, සහ උපාංගයේ ස්ථාන තොරතුරු ඇතුළුව, ඔබේ කාර්යාල පැතිකඩ සමඟ සම්බන්ධිත යෙදුම් සහ දත්ත නිරීක්ෂණය කිරීමට සහ කළමනාකරණය කිරීමට ඔබේ පරිපාලකට හැකිය."</string>
@@ -4671,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"වෙනස් කරන්න"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"සම්බන්ධයි"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"තාවකාලිකව සම්බන්ධ කළා"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"<xliff:g id="SUBNAME">%1$s</xliff:g> තාවකාලිකව භාවිත කරනු ලැබේ"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"සම්බන්ධතාවයක් නැත"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"ජංගම දත්ත ස්වංක්‍රියව සම්බන්ධ නොවනු ඇත"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"ජංගම දත්ත ක්‍රියාවිරහිත කරන්නද?"</string>
@@ -4759,7 +4764,10 @@
     <string name="tare_balances" msgid="731881382594747961">"ශේෂ"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"පරිභෝජන සීමා"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"මූලික උපරිම පරිභෝජන සීමාව"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"උපරිම පරිභෝජන සීමාව"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"සංස්කාරක"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"ක්‍රියා (නිෂ්පාදන වියදම)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"ක්‍රියා (මූලික මිල)"</string>
