--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"మీ ఫేస్ మోడల్ శాశ్వతంగా మరియు సురక్షితంగా తొలగించబడుతుంది.\n\nతొలగించిన తర్వాత, మీ ఫోన్‌ను అన్‌లాక్ చేయడానికి మీకు మీ PIN, ఆకృతి లేదా పాస్‌వర్డ్ అవసరం."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"మీ ఫోన్‌ను అన్‌లాక్ చేయడానికి ఫేస్ అన్‌లాక్‌ను ఉపయోగించండి"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"వేలిముద్ర"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"ఆఫీస్ కోసం వేలిముద్ర"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"వేలిముద్రను జోడించండి"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"ఇప్పుడు మీరు మీ టాబ్లెట్‌ను అన్‌లాక్ చేయడానికి లేదా మీరు యాప్‌లకు సైన్ ఇన్ చేసినప్పుడు ఇది మీరేనని వెరిఫై చేయడానికి మీ వేలిముద్రను ఉపయోగించవచ్చు"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"ఇప్పుడు మీరు మీ పరికరాన్ని అన్‌లాక్ చేయడానికి లేదా మీరు యాప్‌లకు సైన్ ఇన్ చేసినప్పుడు ఇది మీరేనని వెరిఫై చేయడానికి మీ వేలిముద్రను ఉపయోగించవచ్చు"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"ఇప్పుడు మీరు మీ ఫోన్‌ను అన్‌లాక్ చేయడానికి లేదా మీరు యాప్‌లకు సైన్ ఇన్ చేసినప్పుడు ఇది మీరేనని వెరిఫై చేయడానికి మీ వేలిముద్రను ఉపయోగించవచ్చు"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"తర్వాత చేస్తాను"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"పైకి ఎత్తి, మళ్లీ తాకండి"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"సెన్సార్‌పై మీ వేలిముద్రలో కొంత భాగాన్ని ఒక వైపునకు నొక్కి ఉంచి, ఆపై మరొక వైపునకు మార్చండి"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC స్ట్యాక్ లాగింగ్ స్థాయిని పెంచండి"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC వెర్బోస్ విక్రేత డీబగ్ లాగ్"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"బగ్‌రిపోర్ట్‌లలో అదనపు పరికర-నిర్దిష్ట విక్రేత లాగ్‌లను చేర్చండి, ఇది ప్రైవేట్ సమాచారాన్ని కలిగి ఉండవచ్చు."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"ఫిల్టర్ చేయని NFC NCI లాగ్"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"ప్రైవేట్ సమాచారాన్ని కలిగి ఉండే NFC ప్యాకెట్ల వివరాలను క్యాప్చర్ చేయండి."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"పరికరాన్ని రీస్టార్ట్ చేయాలా?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"వివరణాత్మక NFC లాగింగ్ డెవలప్ చేసే ప్రయోజనాల కోసం మాత్రమే ఉద్దేశించబడింది. బగ్ రిపోర్ట్‌లలో అదనపు NFC డేటా చేర్చబడింది, ఇందులో ప్రైవేట్ సమాచారం ఉండవచ్చు. ఈ సెట్టింగ్‌ని మార్చడానికి మీ పరికరాన్ని రీస్టార్ట్ చేయండి."</string>
@@ -1177,6 +1184,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"బెడ్ టైమ్ మోడ్ ఆన్‌లో ఉండడం వల్ల అందుబాటులో లేదు"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"స్క్రీన్ సేవర్‌ను ఉపయోగించండి"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ఛార్జ్ చేసేటప్పుడు లేదా డాక్ చేసినప్పుడు"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ఛార్జింగ్‌లో ఉన్నప్పుడు"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"డాక్ చేయబడినప్పుడు"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"ఎప్పటికీ వద్దు"</string>
@@ -1280,7 +1289,7 @@
     <string name="storage_menu_forget" msgid="5154017890033638936">"విస్మరించు"</string>
     <string name="storage_menu_set_up" msgid="4401074025612064744">"సెటప్ చేయి"</string>
     <string name="storage_menu_free" msgid="616100170298501673">"స్థలాన్ని ఖాళీ చేయి"</string>
-    <string name="storage_menu_manage" msgid="7465522758801346408">"నిల్వను నిర్వహించు"</string>
+    <string name="storage_menu_manage" msgid="7465522758801346408">"నిల్వను మేనేజ్ చేయండి"</string>
     <string name="storage_free_up_space_title" msgid="281047807372131975">"స్పేస్‌ను ఖాళీ చేయండి"</string>
     <string name="storage_free_up_space_summary" msgid="6650027929735481350">"స్పేస్‌ను మేనేజ్ చేయడానికి, అలాగే ఖాళీ చేయడానికి Files యాప్‌నకు వెళ్లండి"</string>
     <string name="storage_other_users" msgid="7017206190449510992">"ఇతర వినియోగదారులు"</string>
@@ -1465,8 +1474,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ఫోన్ యొక్క ఇంటర్నెట్ కనెక్షన్‌ని బ్లూటూత్ ద్వారా షేర్ చేయండి"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ఈథర్‌నెట్ టెథరింగ్"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ఈథర్‌నెట్ ద్వారా ఫోన్ ఇంటర్నెట్ కనెక్షన్‌ను షేర్ చేయండి"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ఈథర్‌నెట్ ద్వారా టాబ్లెట్ ఇంటర్నెట్ కనెక్షన్‌ను షేర్ చేయండి"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"మీ మొబైల్ డేటా కనెక్షన్ ద్వారా ఇతర పరికరాలకు ఇంటర్నెట్‌ని అందించడం కోసం హాట్‌స్పాట్ మరియు టెథెరింగ్‌ని ఉపయోగించండి. ఇంకా, యాప్‌లు సమీప పరికరాలతో కంటెంట్‌ని షేర్ చేయడం కోసం హాట్‌స్పాట్‌ని క్రియేట్ చేయవచ్చు."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"మీ Wi‑Fi లేదా మొబైల్ డేటా కనెక్షన్ ద్వారా ఇతర పరికరాలకు ఇంటర్నెట్‌ను అందించడం కోసం హాట్‌స్పాట్ అలాగే టెథరింగ్‌ను ఉపయోగించండి. సమీప పరికరాలతో కంటెంట్‌ను షేర్ చేయడం కోసం యాప్‌లు కూడా హాట్‌స్పాట్‌ను క్రియేట్ చేయవచ్చు."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"సహాయం"</string>
@@ -1629,7 +1637,7 @@
     <string name="lock_settings_profile_unification_dialog_confirm" msgid="6276915393736137843">"ఒకే లాక్‌ని ఉపయోగించండి"</string>
     <string name="lock_settings_profile_unification_dialog_uncompliant_confirm" msgid="8509287115116369677">"ఒకే లాక్‌ని ఉపయోగించండి"</string>
     <string name="lock_settings_profile_unified_summary" msgid="777095092175037385">"పరికర స్క్రీన్ లాక్ లాంటిది"</string>
-    <string name="manageapplications_settings_title" msgid="9198876415524237657">"యాప్‌లను నిర్వహించు"</string>
+    <string name="manageapplications_settings_title" msgid="9198876415524237657">"యాప్‌లను మేనేజ్ చేయండి"</string>
     <string name="applications_settings" msgid="1941993743933425622">"యాప్ సమాచారం"</string>
     <string name="applications_settings_header" msgid="3154670675856048015">"యాప్‌ సెట్టింగ్‌లు"</string>
     <string name="install_applications" msgid="3921609656584369901">"తెలియని మూలాలు"</string>
@@ -2561,7 +2569,7 @@
     <string name="backup_data_title" msgid="507663517227498525">"నా డేటాను బ్యాకప్ చేయి"</string>
     <string name="backup_data_summary" msgid="8054551085241427531">"యాప్‌ డేటా, Wi‑Fi పాస్‌వర్డ్‌లు మరియు ఇతర సెట్టింగ్‌లను Google సర్వర్‌లకు బ్యాకప్ చేయండి"</string>
     <string name="backup_configure_account_title" msgid="8574055186903658842">"ఖాతాను బ్యాకప్ చేయి"</string>
-    <string name="backup_data_management_title" msgid="6596830198441939702">"బ్యాకప్ ఖాతాని నిర్వహించు"</string>
+    <string name="backup_data_management_title" msgid="6596830198441939702">"బ్యాకప్ ఖాతాని మేనేజ్ చేయండి"</string>
     <string name="include_app_data_title" msgid="2969603876620594523">"యాప్‌ డేటాను చేర్చు"</string>
     <string name="auto_restore_title" msgid="4124345897936637561">"ఆటోమేటిక్ పునరుద్ధరణ"</string>
     <string name="auto_restore_summary" msgid="6830198851045584001">"యాప్‌ను మళ్లీ ఇన్‌స్టాల్ చేస్తున్నప్పుడు, బ్యాకప్ చేయబడిన సెట్టింగ్‌లను మరియు డేటాను పునరుద్ధరించండి"</string>
@@ -2937,10 +2945,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (సిఫార్సు చేయబడింది)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS మెసేజ్‌లు"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"మొబైల్ డేటా ఆఫ్‌లో ఉన్నప్పుడు పంపుతుంది &amp; అందుకుంటుంది"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"మొబైల్ డేటాను ఆటోమేటిక్‌గా మార్చండి"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"కాల్స్, ఇంటర్నెట్ కోసం మెరుగైన లభ్యత ఉన్నప్పుడు ఈ నెట్‌వర్క్‌ను తాత్కాలికంగా ఉపయోగించండి"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"కార్యాలయ సిమ్"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"యాప్ &amp; కంటెంట్ యాక్సెస్"</string>
     <string name="user_rename" msgid="8735940847878484249">"పేరు మార్చండి"</string>
@@ -3452,6 +3458,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"మీ అభ్యర్ధన మేరకు Android, ఈ పరికరంలో ఈ యాప్ యొక్క నోటిఫికేషన్‌లను కనిపించకుండా బ్లాక్ చేస్తోంది"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"మీ అభ్యర్ధన మేరకు Android, ఈ పరికరంలో ఈ వర్గం యొక్క నోటిఫికేషన్‌లను కనిపించకుండా బ్లాక్ చేస్తోంది"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"మీ అభ్యర్ధన మేరకు Android, ఈ పరికరంలో ఈ గ్రూప్‌ యొక్క నోటిఫికేషన్‌లను కనిపించకుండా బ్లాక్ చేస్తోంది"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"కేటగిరీలు"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"ఇతరం"</string>
     <string name="no_channels" msgid="4716199078612071915">"ఈ యాప్ ఏ నోటిఫికేషన్‌లను పోస్ట్ చేయలేదు"</string>
@@ -3873,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"మీ క్రెడిట్ ప్రొవైడర్ ద్వారా బ్లాక్ చేయబడింది"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"తల్లి/తండ్రి అవసరం"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"దీనిని సెటప్ చేయడం ప్రారంభించడానికి ఫోన్‌ను మీ తల్లి/తండ్రికి అప్పగించండి"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"ఈ సెట్టింగ్‌ని మార్చడాన్ని అనుమతించడానికి ఫోన్‌ను మీ పేరెంట్‌కు అప్పగించండి."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"మరింత సమాచారం కోసం, మీ IT అడ్మిన్‌ను కాంటాక్ట్ చేయండి"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"మరిన్ని వివరాలు"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"సెట్టింగ్‌లు, అనుమతులు, కార్పొరేట్ యాక్సెస్, నెట్‌వర్క్ యాక్టివిటీ మరియు డివైజ్ యొక్క లొకేషన్ సమాచారంతో పాటు మీ కార్యాలయ ప్రొఫైల్‌కి అనుబంధితంగా ఉన్న యాప్‌లు మరియు డేటాను మీ అడ్మిన్ పర్యవేక్షించగలరు, మేనేజ్ చేయగలరు ."</string>
@@ -4671,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"మార్చండి"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"కనెక్ట్ చేయబడింది"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"తాత్కాలికంగా కనెక్ట్ చేయబడింది"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"<xliff:g id="SUBNAME">%1$s</xliff:g>ను తాత్కాలికంగా ఉపయోగిస్తున్నారు"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"కనెక్షన్ లేదు"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"మొబైల్ డేటా ఆటోమెటిక్‌గా కనెక్ట్ అవ్వదు"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"మొబైల్ డేటాను ఆఫ్ చేయాలా?"</string>
@@ -4759,7 +4764,10 @@
     <string name="tare_balances" msgid="731881382594747961">"బ్యాలెన్స్‌లు"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"వినియోగ పరిమితులు"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"ప్రారంభ వినియోగ పరిమితి"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"గరిష్ఠ వినియోగ పరిమితి"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"మోడిఫయర్‌లు"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"చర్యలు (ప్రొడ్యూస్ చేసే ధర)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"చర్యలు (ప్రారంభ ధర)"</string>
