--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"‏آپ کے چہرے کے ماڈل کو مستقل اور محفوظ طریقے سے حذف کر دیا جائے گا۔\n\nحذف کرنے کے بعد، آپ کو اپنے فون کو غیر مقفل کرنے کے لیے آپ کو اپنا PIN، پیٹرن یا پاس ورڈ درکار ہوگا۔"</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"اپنے فون کو غیر مقفل کرنے کے لیے فیس اَنلاک کا استعمال کریں"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"فنگر پرنٹ"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"کام کیلئے فنگر پرنٹ"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"فنگر پرنٹ شامل کریں"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"اب آپ اپنا ٹیبلیٹ غیر مقفل کرنے یا یہ توثیق کرنے کیلئے کہ یہ آپ ہی ہیں، اپنا فنگر پرنٹ استعمال کر سکتے ہیں، جیسے ایپس میں سائن ان کرتے وقت"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"اب آپ اپنا آلہ غیر مقفل کرنے یا یہ توثیق کرنے کیلئے کہ یہ آپ ہی ہیں، اپنا فنگر پرنٹ استعمال کر سکتے ہیں، جیسے ایپس میں سائن ان کرتے وقت"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"اب آپ اپنا فون غیر مقفل کرنے یا یہ توثیق کرنے کیلئے کہ یہ آپ ہی ہیں، اپنا فنگر پرنٹ استعمال کر سکتے ہیں، جیسے ایپس میں سائن ان کرتے وقت"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"اسے بعد میں کریں"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"اٹھائیں، پھر دوبارہ ٹچ کریں"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"اپنے فنگر پرنٹ کے حصے کو سینسر پر رکھیں اور دبائے رکھیں پھر، دوسرے حصے پر سوئچ کریں"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"‏NFC انبار کا لاگ ان لیول بڑھائیں"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"‏NFC وربوس وینڈر ڈیبگ لاگ"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"اضافی آلے کے مخصوص وینڈر لاگز کو بگ رپورٹس میں شامل کریں جن میں نجی معلومات شامل ہو سکتی ہیں۔"</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"‏NFC NCI کا غیر فلٹر شدہ لاگ"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"‏تفصیلی NFC پیکٹس کیپچر کریں جن میں نجی معلومات شامل ہو سکتی ہیں۔"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"آلہ ری اسٹارٹ کریں؟"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"‏تفصیلی NFC لاگنگ صرف ترقیاتی مقاصد کے لیے ہے۔ اضافی NFC ڈیٹا بگ رپورٹس میں شامل ہے جس میں نجی معلومات شامل ہو سکتی ہیں۔ اس ترتیب کو تبدیل کرنے کے لیے اپنا آلہ ری اسٹارٹ کریں۔"</string>
@@ -1177,6 +1184,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"دستیاب نہیں ہے کیونکہ بیڈ ٹائم موڈ آن ہے"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"اسکرین سیور کا استعمال کریں"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ڈاک سے منسلک یا چارج ہونے کے دوران"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"چارج ہوتے وقت"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"ڈاک کیے ہونے پر"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"کبھی نہیں"</string>
@@ -1465,8 +1474,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"بلوٹوتھ کے ذریعے فون کے انٹرنیٹ کنکشن کا اشتراک کریں"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ایتھرنیٹ ٹیدرنگ"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"‏Ethernet ایتھرنیٹ کے ذریعے فون کے انٹرنیٹ کنیکشن کا اشتراک کریں"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ایتھرنیٹ کے ذریعے ٹیبلیٹ کے انٹرنیٹ کنکشن کا اشتراک کریں"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"اپنے موبائل ڈیٹا کنکشن کے ذریعے دیگر آلات کو انٹرنیٹ فراہم کرنے کیلئے ہاٹ اسپاٹ اور ٹیدرنگ کا استعمال کریں۔ ایپس بھی قریبی آلات کے ساتھ مواد کا اشتراک کرنے کیلئے ایک ہاٹ اسپاٹ تخلیق کر سکتی ہیں۔"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"‏اپنے Wi‑Fi یا موبائل ڈیٹا کنکشن کے ذریعے دیگر آلات کو انٹرنیٹ فراہم کرنے کے لیے ہاٹ اسپاٹ اور ٹیدرنگ کا استعمال کریں۔ ایپس بھی قریبی آلات کے ساتھ مواد کا اشتراک کرنے کے لیے ایک ہاٹ اسپاٹ تخلیق کر سکتی ہیں۔"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"مدد"</string>
@@ -2937,10 +2945,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"‏LTE (تجویز کردہ)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"‏MMS پیغامات"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"موبائل ڈیٹا آف ہونے پر بھیجیں اور وصول کریں"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"موبائل ڈیٹا کو خودکار طور پر سوئچ کریں"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"اس نیٹ ورک کو عارضی طور پر استعمال کریں جب اس میں کالز اور انٹرنیٹ کی بہتر دستیابی ہو"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"‏دفتر کا SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"ایپ اور مواد تک رسائی"</string>
     <string name="user_rename" msgid="8735940847878484249">"نام تبدیل کریں"</string>
@@ -3452,6 +3458,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"‏آپ کی درخواست پر، Android اس ایپ کی اطلاعات کو اس آلہ پر ظاہر ہونے سے مسدود کررہا ہے"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"‏آپ کی درخواست پر، Android اطلاعات کے اس زمرے کو اس آلہ پر ظاہر ہونے سے مسدود کررہا ہے"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"‏آپ کی درخواست پر، Android اطلاعات کے اس گروپ کو اس آلہ پر ظاہر ہونے سے مسدود کر رہا ہے"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"زمرے"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"دیگر"</string>
     <string name="no_channels" msgid="4716199078612071915">"اس ایپ نے کوئی اطلاعات شائع نہیں کی ہیں"</string>
@@ -3873,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"آپ کے کریڈٹ فراہم کنندہ نے مسدود کیا ہے"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"والد/والدہ درکار ہیں"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"اس کا سیٹ اپ شروع کرنے کیلئے فون کو اپنے والدین کے حوالے کریں"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"اس ترتیب کو تبدیل کرنے کی اجازت دینے کے لیے فون اپنے والد/والدہ کے ہاتھ میں دیں۔"</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"‏مزید معلومات کے لیے، اپنے IT منتظم سے رابطہ کریں"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"مزید تفصیلات"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"آپ کا منتظم آپ کے دفتری پروفائل سے وابستہ ایپس اور ڈیٹا، بشمول ترتیبات، اجازتیں، کارپوریٹ رسائی، نیٹ ورک کی سرگرمی اور آلہ کے مقام کی معلومات مانیٹر اور منظم کر سکتا ہے۔"</string>
@@ -4671,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"تبدیل کریں"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"منسلک ہے"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"عارضی طور پر منسلک ہے"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"عارضی طور پر <xliff:g id="SUBNAME">%1$s</xliff:g> استعمال کرنا"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"کوئی کنکشن نہیں"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"موبائل ڈیٹا خودکار طور پر منسلک نہیں ہوگا"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"موبائل ڈیٹا آف کریں؟"</string>
@@ -4759,7 +4764,10 @@
     <string name="tare_balances" msgid="731881382594747961">"بیلنسز"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"کھپت کی حدود"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"ابتدائی کھپت کی حد"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"زیادہ سے زیادہ کھپت کی حد"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"موڈیفائرز"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"کارروائیاں (پروڈیوس کرنے کی لاگت)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"کارروائیاں (بنیادی قیمت)"</string>
