--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"የእርስዎ የመልክ ሞዴል በቋሚነት እና ደህንነቱ በተጠበቀ መንገድ ይሰረዛል።\n\nከስረዛ በኋላ ስልክዎን ለመክፈት የእርስዎ ፒን፣ ስርዓተ-ጥለት ወይም የይለፍ ቃል ያስፈልገዎታል።"</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"የእርስዎን ስልክ ለመክፈት በመልክ መክፈትን ይጠቀሙ"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"የጣት አሻራ"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"የጣት አሻራ ለሥራ"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"የጣት አሻራ አክል"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"አሁን የጣት አሻራዎትን የእርስዎን ጡባዊ ለመክፈት ወይም ለምሳሌ ወደ መተግበሪያዎች በሚገቡበት ጊዜ እርስዎ መሆንዎትን ለማረጋገጥ ሊጠቀሙበት ይችላሉ"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"አሁን የጣት አሻራዎትን የእርስዎን መሣሪያ ለመክፈት ወይም ለምሳሌ ወደ መተግበሪያዎች በሚገቡበት ጊዜ እርስዎ መሆንዎትን ለማረጋገጥ ሊጠቀሙበት ይችላሉ"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"አሁን የጣት አሻራዎትን የእርስዎን ስልክ ለመክፈት ወይም ለምሳሌ ወደ መተግበሪያዎች በሚገቡበት ጊዜ እርስዎ መሆንዎትን ለማረጋገጥ ሊጠቀሙበት ይችላሉ"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"በኋላ ላይ ያድርጉት"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"ያንሱ፣ በመቀጠል መልሰው ይንኩ"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"የጣት አሻራዎን ጎን በዳሳሹ ላይ አስቀምጠው ይያዙት፣ ከዚያ ወደ ሌላኛው ጎን ይቀይሩ"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"የኤንኤፍሲ ቁልል የምዝግብ ማስታወሻ ደረጃን ይጨምሩ"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"የኤንኤፍሲ ብዙ ቃላት አቅራቢ ስህተት ማረሚያ ምዝግብ ማስታወሻ"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"በሳንካ ሪፖርቶች ውስጥ የግል መረጃን ሊይዙ የሚችሉ ተጨማሪ መሣሪያ-ተኮር የአቅራቢ ምዝግብ ማስታወሻዎችን ያካትቱ።"</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"የኤንኤፍሲ NCI ያልተጣራ ምዝግብ ማስታወሻ"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"የግል መረጃን ሊይዙ የሚችሉ ዝርዝር የኤንኤፍሲ ጥቅሎችን ይቅረጹ።"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"መሣሪያ እንደገና ይጀምር?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"ዝርዝር የኤንኤፍሲ ምዝግብ ማስታወሻ ለግንባታ ዓላማዎች ብቻ የታሰበ ነው። በሳንካ ሪፖርቶች ውስጥ የግል መረጃን ሊይዝ የሚችል ተጨማሪ የኤንኤፍሲ ውሂብ ተካትቷል። ይህን ቅንብር ለመለወጥ መሣሪያዎን እንደገና ያስጀምሩ።"</string>
@@ -1177,6 +1184,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"የመኝታ ሰዓት ሁነታ ስለበራ የማይገኝ"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"የማያ ገጽ አዳኝን ይጠቀሙ"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ኃይል እየሞላ ወይም ተተክሎ ሳለ"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ባትሪ በመሙላት ላይ ሳለ"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"ተተክሎ ሳለ"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"በጭራሽ"</string>
@@ -1465,8 +1474,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"የስልክ በይነመረብ ግንኙነትን በብሉቱዝ በኩል አጋራ"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"የኢተርኔት ማስተሳሰር"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"የስልክ በይነመረብ ግንኙነትን በዩኤስቢ ኢተርኔት በኩል አጋራ"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"የጡባዊ በይነመረብ ግንኙነትን በኢተርኔት በኩል አጋራ"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"በእርስዎ የተንቀሳቃሽ ስልክ ውሂብ ግንኙነት በኩል በይነመረቡ ለሌሎች መሣሪያዎች ለማቅረብ የመገናኛ ነጥብን እና እንደ ሞደም መሰካትን ይጠቀሙ። መተግበሪያዎች በአቅራቢያ ላሉ መሣሪያዎች ይዘትን ለማጋራት መገናኛ ነጥብን ሊፈጥሩ ይችላሉ።"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"በእርስዎ Wi-Fi ወይም የተንቀሳቃሽ ስልክ ውሂብ ግንኙነት በኩል በይነመረቡ ለሌሎች መሣሪያዎች ለማቅረብ የመገናኛ ነጥብን እና እንደ ሞደም መሰካትን ይጠቀሙ። መተግበሪያዎች እንዲሁም ይዘቶችን በአቅራቢያ ላሉ መሣሪያዎች ለማጋራት መገናኛ ነጥብን መፍጠር ይችላሉ።"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"እገዛ"</string>
@@ -2937,10 +2945,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (የሚመከር)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"የኤምኤምኤስ መልዕክቶች"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"የሞባይል ውሂብ ሲጠፋ ይላኩ እና ይቀበሉ"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"በራስ ሰር የተንቀሳቃሽ ስልክ ውሂብን ቀይር"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"ይህ አውታረ መረብ ለጥሪዎች እና በይነመረብ የተሻለ ተገኝነት ሲኖረው በጊዜያዊነት ይጠቀሙት"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"የስራ ሲም"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"የመተግበሪያ እና የይዘት መዳረሻ"</string>
     <string name="user_rename" msgid="8735940847878484249">"ዳግም ሰይም"</string>
@@ -3452,6 +3458,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"በጥያቄዎ መሠረት Android የዚህ መተግበሪያ ማሳወቂያዎች በዚህ መሣሪያ ላይ እንዳይታዩ እያገደ ነው"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"በጥያቄዎ መሠረት Android ይህ የማሳወቂያዎች ምድብ በዚህ መሣሪያ ላይ እንዳይታይ እያገደ ነው"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"በጥያቄዎ መሠረት Android ይህን የማሳወቂያዎች ስብስብ በዚህ መሣሪያ ላይ እንዳይታይ እያገደ ነው"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"ምድቦች"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"ሌላ"</string>
     <string name="no_channels" msgid="4716199078612071915">"ይህ መተግበሪያ ምንም ማሳወቂያዎችን አልለጠፈም"</string>
@@ -3873,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"በክሬዲት አቅራቢዎ ታግዷል"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"ወላጅ ያስፈልጋል"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"ይህን ማዋቀር ለመጀመር ስልኩን ለወላጅዎ ይስጡት"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"ይህ ቅንብር እንዲለውጥ ለመፍቀድ ለወላጅዎ ስልኩን ይስጡ።"</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"ለተጨማሪ መረጃ የአይቲ አስተዳዳሪዎን ያነጋግሩ"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"ተጨማሪ ዝርዝሮች"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"የእርስዎ አስተዳዳሪ ቅንብሮችን፣ ፈቃዶችን፣ የኮርፖሬት መዳረሻን፣ የአውታረ መረብ እንቅስቃሴን እና የመሣሪያዎ አካባቢያዊ መረጃን ጨምሮ ከእርስዎ የስራ መገለጫ ጋር የተጎዳኙ መተግበሪያዎችን እና ውሂብን መከታተል እና ማቀናበር ይችላል።"</string>
@@ -4671,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"ቀይር"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"ተገናኝቷል"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"በጊዜያዊነት ተገናኝቷል"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"<xliff:g id="SUBNAME">%1$s</xliff:g>ን በጊዜያዊነት በመጠቀም ላይ"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"ግንኙነት የለም"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"የተንቀሳቃሽ ስልክ ውሂብ በራስ-ሰር አይገናኝም"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"የተንቀሳቃሽ ስልክ ውሂብ ይጥፋ?"</string>
@@ -4759,7 +4764,10 @@
     <string name="tare_balances" msgid="731881382594747961">"ሚዛኖች"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"የፍጆታ ገደቦች"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"የመጀመሪያው የፍጆታ ገደብ"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"ከፍተኛው የፍጆታ ገደብ"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"ቀያሪዎች"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"እርምጃዎች (የሚያስወጣው ወጪ)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"እርምጃዎች (መሰረታዊ ዋጋ)"</string>
