--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"আপোনাৰ মুখাৱয়বৰ ম\'ডেলটো স্থায়ী তথা সুৰক্ষিতভাৱে মচা হ’ব।\n\nমচাৰ পাছত, ফ’নটো আনলক কৰিবলৈ আপোনাক নিজৰ পিন, আৰ্হি অথবা পাছৱৰ্ডৰ প্ৰয়োজন হ’ব।"</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"আপোনাৰ ফ’নটো আনলক কৰিবলৈ ফেচ আনলক ব্যৱহাৰ কৰক"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"ফিংগাৰপ্ৰিণ্ট"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"কৰ্মস্থানৰ ফিংগাৰপ্ৰিণ্ট"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"ফিংগাৰপ্ৰিণ্ট যোগ কৰক"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"এতিয়া আপুনি নিজৰ টেবলেটটো আনলক কৰিবলৈ অথবা এপত ছাইন ইন কৰাৰ দৰে কাৰ্য কৰোঁতে এয়া আপুনিয়েই বুলি সত্যাপন কৰিবলৈ নিজৰ ফিংগাৰপ্ৰিণ্ট ব্যৱহাৰ কৰিব পাৰে"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"এতিয়া আপুনি নিজৰ ডিভাইচটো আনলক কৰিবলৈ অথবা এপত ছাইন ইন কৰাৰ দৰে কাৰ্য কৰোঁতে এয়া আপুনিয়েই বুলি সত্যাপন কৰিবলৈ নিজৰ ফিংগাৰপ্ৰিণ্ট ব্যৱহাৰ কৰিব পাৰে"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"এতিয়া আপুনি নিজৰ ফ’নটো আনলক কৰিবলৈ অথবা এপত ছাইন ইন কৰাৰ দৰে কাৰ্য কৰোঁতে এয়া আপুনিয়েই বুলি সত্যাপন কৰিবলৈ নিজৰ ফিংগাৰপ্ৰিণ্ট ব্যৱহাৰ কৰিব পাৰে"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"এইটো পাছত কৰিব"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"ওপৰলৈ উঠাওক, তাৰ পাছত পুনৰ স্পৰ্শ কৰক"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"আপোনাৰ ফিংগাৰপ্ৰিণ্টৰ কাষটো ছেন্সৰটোত ৰাখি অলপ সময় ধৰি থাকক, তাৰ পাছত আনটো কাষ ৰাখক"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC ষ্টেক লগিঙৰ স্তৰ বৃদ্ধি কৰক"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC বিক্ৰেতাৰ ভাৰ্ব’ছ ডিবাগ লগ"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"বাগ ৰিপ’ৰ্টসমূহত অতিৰিক্ত ডিভাইচ নিৰ্দিষ্ট বিক্ৰেতাৰ লগসমূহ অন্তৰ্ভুক্ত কৰক, য’ত ব্যক্তিগত তথ্য থাকিব পাৰে।"</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC NCIৰ ফিল্টাৰ নকৰা লগ"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"সবিশেষ NFC পেকেট কেপচাৰ কৰক, য’ত ব্যক্তিগত তথ্য থাকিব পাৰে।"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"ডিভাইচটো ৰিষ্টাৰ্ট কৰিবনে?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"সবিশেষ NFC লগিং কেৱল বিকাশৰ উদ্দেশ্যেৰে কৰা হয়। অতিৰিক্ত NFC ডেটা বাগ ৰিপ’ৰ্টসমূহত অন্তৰ্ভুক্ত কৰা হয়, য’ত ব্যক্তিগত তথ্য থাকিব পাৰে। এই ছেটিং সলনি কৰিবলৈ আপোনাৰ ডিভাইচটো ৰিষ্টাৰ্ট কৰক।"</string>
@@ -1177,6 +1184,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"বেডটাইম ম’ড অন হৈ থকাৰ বাবে উপলব্ধ নহয়"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"স্ক্ৰীন ছেভাৰ ব্যৱহাৰ কৰক"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"চাৰ্জ কৰোঁতে বা ডক কৰি থওঁতে"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"চাৰ্জ কৰি থকাৰ সময়ত"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"ডক হৈ থাকোঁতে"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"কেতিয়াও নহয়"</string>
@@ -1465,8 +1474,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ব্লুটুথৰ যোগেৰে ফ\'নৰ ইণ্টাৰনেট শ্বেয়াৰ কৰক"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ইথাৰনেট টে\'ডাৰিং"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ইথাৰনেটৰ মাধ্যমেৰে ফ’নটোৰ ইণ্টাৰনেট সংযোগ শ্বেয়াৰ কৰক"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ব্লুটুথৰ যোগেৰে টে’বলেটৰ ইণ্টাৰনেট সংযোগ শ্বেয়াৰ কৰক"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"আপোনাৰ ম\'বাইলৰ ডেটা ব্যৱহাৰ কৰি অন্য ডিভাইচবোৰক ইণ্টাৰনেট ব্যৱহাৰ কৰিব দিবলৈ হ\'টস্পট আৰু টেদৰিং সুবিধা ব্যৱহাৰ কৰক। নিকটবৰ্তী ডিভাইচসমূহৰ সৈতে সমল শ্ৱেয়াৰ কৰিবলৈ এপসমূহে হ\'টস্পট ও সৃষ্টি কৰিব পাৰে।"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"আপোনাৰ ৱাই-ফাই অথবা ম’বাইল ডেটাৰ জৰিয়তে অন্য ডিভাইচসমূহক ইণ্টাৰনেট প্ৰদান কৰিবলৈ হটস্পট আৰু টে\'ডাৰিং ব্যৱহাৰ কৰক। নিকটৱৰ্তী ডিভাইচসমূহৰ সৈতে সমল শ্বেয়াৰ কৰিবলৈ এপ্‌সমূহেও এটা হটস্পট সৃষ্টি কৰিব পাৰে।"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"সহায়"</string>
@@ -2937,10 +2945,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (অনুমোদিত)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"এমএমএছ বাৰ্তা"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"ম’বাইল ডেটা অফ থাকোঁতেও পঠিয়াওক আৰু গ্ৰহণ কৰক"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"স্বয়ংক্ৰিয়ভাৱে ম’বাইলৰ ডেটা সলনি কৰক"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"এই নেটৱৰ্কটোৰ কল আৰু ইণ্টাৰনেটৰ বাবে অধিক ভাল উপলব্ধ থাকিলে ইয়াক অস্থায়ীভাৱে ব্যৱহাৰ কৰক"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"কৰ্মস্থানৰ ছিম"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"এপ্ আৰু সমলৰ এক্সেছ"</string>
     <string name="user_rename" msgid="8735940847878484249">"নতুন নাম দিয়ক"</string>
@@ -3452,6 +3458,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"আপোনাৰ অনুৰোধত অনুযায়ী Android-এ এই এপ্‌‌টোৰ জাননীসমূহ এই ডিভাইচটোত দেখুওৱাত বাধা দিছে"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"আপোনাৰ অনুৰোধমৰ্মে, Androidএ জাননীসমূহৰ এই শ্ৰেণীটোক এই ডিভাইচটোত দৃশ্যমান হ\'বলৈ দিয়া নাই"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"আপোনাৰ অনুৰোধমৰ্মে, Androidএ জাননীসমূহৰ এই গোটটোক এই ডিভাইচটোত দৃশ্যমান হ\'বলৈ দিয়া নাই"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"শ্ৰেণী"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"অন্যান্য"</string>
     <string name="no_channels" msgid="4716199078612071915">"এই এপটোৱে এটাও জাননী দিয়া নাই"</string>
@@ -3873,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"আপোনাৰ ক্ৰেডিট প্ৰদানকাৰীয়ে অৱৰোধ কৰিছে"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"অভিভাৱক আৱশ্যক"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"এইটো ছেটআপ কৰাটো আৰম্ভ কৰিবলৈ আপোনাৰ অভিভাৱকক ফ’নটো দিয়ক"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"এই ছেটিংটো সলনি কৰাৰ অনুমতি দিবলৈ আপোনাৰ অভিভাৱকক ফ’নটো দিয়ক।"</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"অধিক জানিবলৈ আপোনাৰ আইটি প্ৰশাসকৰ সৈতে যোগাযোগ কৰক"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"অধিক বিৱৰণ"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"আপোনাৰ এডমিনে আপোনাৰ কৰ্মস্থানৰ প্ৰ\'ফাইলৰ ছেটিং, অনুমতি, কৰ্পৰেট এক্সেছ, নেটৱৰ্ক কাৰ্যকলাপ আৰু ডিভাইচৰ অৱস্থানৰ তথ্যৰ সৈতে জড়িত এপ্ আৰু ডেটা নিৰীক্ষণ কৰাৰ লগতে পৰিচালনা কৰিব পাৰে।"</string>
@@ -4671,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"সলনি কৰক"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"সংযোজিত হৈ আছে"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"অস্থায়ীভাৱে সংযোগ কৰা হৈছে"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"অস্থায়ীভাৱে <xliff:g id="SUBNAME">%1$s</xliff:g> ব্যৱহাৰ কৰি"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"সংযোগ নাই"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"ম’বাইল ডেটা স্বয়ংক্ৰিয়ভাৱে সংযুক্ত নহ’ব"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"ম’বাইল ডেটা অফ কৰিবনে?"</string>
@@ -4759,7 +4764,10 @@
     <string name="tare_balances" msgid="731881382594747961">"বেলেঞ্চ"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"খৰচ কৰাৰ সীমা"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"খৰচ কৰাৰ প্ৰাৰম্ভিক সীমা"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"খৰচ কৰাৰ সৰ্বাধিক সীমা"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"সংশোধক"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"কাৰ্য (উৎপাদন খৰচ)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"কাৰ্য (আধাৰ মূল্য)"</string>
