--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -363,6 +363,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Мадэль вашага твару будзе канчаткова і бяспечна выдалена.\n\nПасля гэтага для разблакіроўкі тэлефона трэба будзе выкарыстоўваць PIN-код, узор разблакіроўкі ці пароль."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Выкарыстанне функцыі распазнавання твару для разблакіроўкі тэлефона"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Адбітак пальца"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Адбітак пальца (праца)"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Дадаць адбітак пальца"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -492,6 +494,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Цяпер вы можаце выкарыстоўваць адбітак пальца для разблакіроўкі планшэта ці спраўджання сваёй асобы, напрыклад падчас уваходу ў праграмы"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Цяпер вы можаце выкарыстоўваць адбітак пальца для разблакіроўкі прылады ці спраўджання сваёй асобы, напрыклад падчас уваходу ў праграмы"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Цяпер вы можаце выкарыстоўваць адбітак пальца для разблакіроўкі тэлефона ці спраўджання сваёй асобы, напрыклад падчас уваходу ў праграмы"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Пазней"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Падніміце і дакраніцеся зноў"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Прыкладзіце палец да датчыка адным бокам і ўтрымлівайце яго, потым павярніце іншым бокам"</string>
@@ -825,8 +833,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Павысіць узровень вядзення журналаў для стоса NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Дэтальны журнал адладкі ад пастаўшчыка NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Дадаваць у справаздачы пра памылкі дадатковыя журналы пастаўшчыка прылады (можа ўтрымлівацца прыватная інфармацыя)."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"Журнал NCI NFC без прымянення фільтраў"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Захоўваць пакеты падрабязных даных NFC, якія могуць утрымліваць прыватную інфармацыю."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Перазапусціць прыладу?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Падрабязнае вядзенне журналаў NFC прызначана толькі для мэт распрацоўкі. У справаздачы пра памылкі ўключаюцца дадатковыя даныя NFC, якія могуць утрымліваць прыватную інфармацыю. Перазапусціце прыладу, каб змяніць гэту наладу."</string>
@@ -1219,6 +1226,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Недаступна, бо ўключаны начны рэжым"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Ужываць экранную застаўку"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Пакуль прылада зараджаецца ці падключана"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Падчас зарадкі"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Пры падключэнні"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Ніколі"</string>
@@ -1509,8 +1518,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Абагуліць падключэнне да інтэрнэту тэлефона праз Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Мадэм Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Абагуліць інтэрнэт-падключэнне гэтага тэлефона праз Ethernet"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Абагульваць падключэнне да інтэрнэту планшэта праз Ethernet"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Выкарыстоўвайце хот-спот і рэжым мадэма для падключэння да інтэрнэту іншых прылад праз мабільную перадачу даных. Праграмы таксама могуць ствараць хот-спот для абагульвання змесціва з прыладамі паблізу."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Для падключэння да інтэрнэту іншых прылад праз Wi-Fi ці мабільную перадачу даных выкарыстоўвайце хот-спот і рэжым мадэма. Для абагульвання змесціва з прыладамі паблізу праграмы таксама могуць ствараць хот-спот."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Даведка"</string>
@@ -3021,10 +3029,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (рэкамендуецца)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS-паведамленні"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Адпраўляць і атрымліваць, калі мабільная перадача даных выключана"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Аўтаматычна пераключаць мабільны інтэрнэт"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Часова выкарыстоўваць гэту сетку, калі яна больш даступная для выклікаў і інтэрнэту"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Рабочая SIM-карта"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Доступ да дадаткаў і змесціва"</string>
     <string name="user_rename" msgid="8735940847878484249">"ПЕРАЙМЕНАВАЦЬ"</string>
@@ -3544,6 +3550,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Па вашым запыце Android блакіруе апавяшчэнні ад дадзенай праграмы на гэтай прыладзе"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Па вашым запыце Android блакіруе дадзеную катэгорыю апавяшчэнняў на гэтай прыладзе"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Па вашым запыце Android блакіруе дадзеную групу апавяшчэнняў на гэтай прыладзе"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"Катэгорыі"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Іншае"</string>
     <string name="no_channels" msgid="4716199078612071915">"Гэта праграма не размяшчала ніякіх апавяшчэнняў"</string>
@@ -3987,8 +3995,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Заблакіравана крэдыторам"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Патрабуецца дапамога бацькоў"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Каб наладзіць гэту функцыю, перадай тэлефон аднаму з бацькоў"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Каб змяніць гэту наладу, перадай тэлефон аднаму з бацькоў."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Па дадатковую інфармацыю звярніцеся да ІT-адміністратара"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Дадатковая інфармацыя"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"У вашага адміністратара ёсць магчымасць маніторынгу і адміністравання праграм і даных, звязаных з вашым працоўным профілем, у тым ліку налад, дазволаў, карпаратыўнага доступу, сеткавай актыўнасці і геаданых."</string>
@@ -4809,10 +4816,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Змяніць"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Падключана"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Падключана часова"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"Часова выкарыстоўваецца трафік аператара \"<xliff:g id="SUBNAME">%1$s</xliff:g>\""</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Няма падключэння"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Мабільная перадача даных не ўключаецца аўтаматычна"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Выключыць мабільную перадачу даных?"</string>
@@ -4897,7 +4902,10 @@
     <string name="tare_balances" msgid="731881382594747961">"Баланс"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Абмежаванні выкарыстання"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Першапачатковае абмежаванне выкарыстання"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Максімальнае абмежаванне выкарыстання"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"Мадыфікатары"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Дзеянні (кошт вытворчасці)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Дзеянні (базісная цана)"</string>
