--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"আপনার ফেস মডেল স্থায়ীভাবে এবং নিরাপদে মুছে ফেলা হবে।\n\nমুছে ফেলার পরে, আপনার ফোন আনলক করতে পিন, প্যাটার্ন বা পাসওয়ার্ড প্রয়োজন হবে।"</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"আপনার ফোন আনলক করার জন্য \'ফেস আনলক\' ব্যবহার করুন"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"আঙ্গুলের ছাপ"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"কাজের জন্য ফিঙ্গারপ্রিন্ট"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"আঙ্গুলের ছাপ যোগ করুন"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"অ্যাপে সাইন-ইন করার মতোই এখন ফিঙ্গারপ্রিন্ট ব্যবহার করে আপনি ট্যাবলেট আনলক বা নিজের পরিচয় যাচাই করতে পারবেন"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"অ্যাপে সাইন-ইন করার মতোই এখন ফিঙ্গারপ্রিন্ট ব্যবহার করে আপনি ডিভাইস আনলক বা নিজের পরিচয় যাচাই করতে পারবেন"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"অ্যাপে সাইন-ইন করার মতোই এখন ফিঙ্গারপ্রিন্ট ব্যবহার করে আপনি ফোন আনলক বা নিজের পরিচয় যাচাই করতে পারবেন"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"এটি পরে করুন"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"আঙ্গুল তুলুন, তারপর আবার স্পর্শ করুন"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"প্রথমে আপনার আঙুলের একটি কোণা সেন্সরে কিছুটা সময়ের জন্য রেখে ধরে থাকুন এবং তারপর অন্য দিক থেকে আবার একই জিনিস করুন"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC-এর স্ট্যাক লগ করার লেভেল বাড়ান"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC ভার্বোস ভেন্ডর ডিবাগ লগ"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"সমস্যার রিপোর্টে ডিভাইস-নির্দিষ্ট অতিরিক্ত ভেন্ডর লগ অন্তর্ভুক্ত করুন, যার মধ্যে ব্যক্তিগত তথ্যও থাকতে পারে।"</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC NCI ফিল্টার না করা লগ"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"NFC প্যাকেটের বিবরণ ক্যাপচার করুন, যার মধ্যে ব্যক্তিগত তথ্য থাকতে পারে।"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"ডিভাইস রিস্টার্ট করবেন?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"শুধুমাত্র উন্নতির উদ্দেশ্যে বিস্তারিত NFC লগিং করা হয়েছে। NFC সংক্রান্ত অতিরিক্ত ডেটা সমস্যার রিপোর্টে অন্তর্ভুক্ত করা হয়েছে, যার মধ্যে ব্যক্তিগত তথ্যও থাকতে পারে। এই সেটিং পরিবর্তন করতে, আপনার ডিভাইস রিস্টার্ট করুন।"</string>
@@ -1177,6 +1184,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"বেডটাইম মোড চালু থাকায় এই সুবিধা উপলভ্য নয়"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"স্ক্রিন সেভার ব্যবহার করা"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"চার্জ অথবা ডক করার সময়"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"চার্জ করার সময়"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"ডক করে রাখার সময়"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"কখনই নয়"</string>
@@ -1465,8 +1474,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ব্লুটুথ-এর মাধ্যমে ফোনের ইন্টারনেট কানেকশন শেয়ার করুন"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ইথারনেট টিথারিং"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ইথারনেটের মাধ্যমে ফোনের ইন্টারনেট কানেকশন শেয়ার করুন"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ইথারনেটের মাধ্যমে ট্যাবলেটের ইন্টারনেট কানেকশন শেয়ার করুন"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"আপনার মোবাইল ডেটা কানেকশন মাধ্যমে অন্যান্য ডিভাইসে ইন্টারনেট কানেকশন দিতে হটস্পট এবং টিথারিং ব্যবহার করুন। অ্যাপগুলিও আশেপাশের ডিভাইসের সাথে কন্টেন্ট শেয়ার করার জন্য হটস্পট তৈরি করে নিতে পারে।"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"আপনার মোবাইল ডেটা কানেকশন অথবা ওয়াই-ফাই থেকে অন্যান্য ডিভাইসে ইন্টারনেট কানেকশন দিতে হটস্পট এবং টিথারিং ব্যবহার করুন। অ্যাপগুলিও আশেপাশের ডিভাইসের সাথে কন্টেন্ট শেয়ার করার জন্য হটস্পট তৈরি করে নিতে পারে।"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"সহায়তা"</string>
@@ -2937,10 +2945,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (প্রস্তাবিত)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"এমএমএস মেসেজ"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"মোবাইল ডেটা বন্ধ করা থাকলে পাঠান ও রিসিভ করুন"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"মোবাইল ডেটা অটোমেটিক পরিবর্তন করা"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"কল বা ইন্টারনেটের ক্ষেত্রে আরও ভাল নেটওয়ার্ক উপলভ্য থাকলে সাময়িকভাবে এই নেটওয়ার্ক ব্যবহার করে"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"কর্মস্থলের সিম"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"অ্যাপ্লিকেশন ও কন্টেন্ট অ্যাক্সেস"</string>
     <string name="user_rename" msgid="8735940847878484249">"নাম বদলান"</string>
@@ -3452,6 +3458,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"আপনার অনুরোধ অনুযায়ী Android এই অ্যাপের বিজ্ঞপ্তি এই ডিভাইসে দেখাচ্ছে না"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"আপনার অনুরোধ অনুযায়ী Android এই বিভাগের বিজ্ঞপ্তিগুলি এই ডিভাইসে দেখাচ্ছে না"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"আপনার অনুরোধ অনুযায়ী Android এই ধরনের বিজ্ঞপ্তিগুলি এই ডিভাইসে দেখাচ্ছে না"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"বিভাগগুলি"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"অন্যান্য"</string>
     <string name="no_channels" msgid="4716199078612071915">"এই অ্যাপটি দ্বারা কোন বিজ্ঞপ্তি পোস্ট করা হয়নি"</string>
@@ -3873,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"ক্রেডিট প্রদানকারী ব্লক করেছেন"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"অভিভাবকের অনুমতি প্রয়োজন"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"এই ফিচারটি সেটআপ করার জন্য আপনার অভিভাবকের সাহায্য নিন"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"এই সেটিং পরিবর্তন করার জন্য ফোনটি তোমার অভিভাবককে দাও।"</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"আরও তথ্যের জন্য, আপনার আইটি অ্যাডমিনের সাথে যোগাযোগ করুন"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"আরো বিশদ বিবরণ"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"আপনার প্রশাসক আপনার কর্মস্থলের প্রোফাইলের সাথে সম্পর্কিত অ্যাপ এবং ডেটা নিরীক্ষণ ও পরিচালনা করতে পারেন, যাতে সামিল রয়েছে সেটিংস, অনুমতি, কর্পোরেট অ্যাক্সেস, নেটওয়ার্ক অ্যাক্টিভিটি এবং ডিভাইসের লোকেশন তথ্য।"</string>
@@ -4671,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"পরিবর্তন করুন"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"কানেক্ট করা আছে"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"সাময়িকভাবে কানেক্ট করা হয়েছে"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"সাময়িকভাবে <xliff:g id="SUBNAME">%1$s</xliff:g> ব্যবহার করা হচ্ছে"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"কানেকশন নেই"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"মোবাইল ডেটা নিজে থেকে কানেক্ট হবে না"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"মোবাইল ডেটা বন্ধ করবেন?"</string>
@@ -4759,7 +4764,10 @@
     <string name="tare_balances" msgid="731881382594747961">"ব্যালেন্স"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"ব্যবহারের সীমা"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"প্রাথমিক ব্যবহারের সীমা"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"সর্বাধিক ব্যবহারের সীমা"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"পরিবর্তনকারী"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"অ্যাকশন (উৎপাদনের খরচ)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"অ্যাকশন (মূল দাম)"</string>
