--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Το μοντέλο προσώπου θα διαγραφεί οριστικά και με ασφάλεια.\n\nΜετά τη διαγραφή, θα χρειαστείτε το PIN, το μοτίβο ή τον κωδικό πρόσβασης για να ξεκλειδώσετε το τηλέφωνό σας."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Χρησιμοποιήστε τη λειτουργία Ξεκλείδωμα με το πρόσωπο για το ξεκλείδωμα του τηλεφώνου σας."</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Δακτυλικό αποτύπωμα"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Δακτυλικό αποτύπωμα για επ. χρήση"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Προσθήκη δακτ. αποτυπώματος"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Μπορείτε πλέον να χρησιμοποιείτε το δακτυλικό σας αποτύπωμα για να ξεκλειδώνετε το tablet σας ή για να επαληθεύετε την ταυτότητά σας, για παράδειγμα, όταν συνδέεστε σε εφαρμογές."</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Μπορείτε πλέον να χρησιμοποιείτε το δακτυλικό σας αποτύπωμα για να ξεκλειδώνετε τη συσκευή σας ή να επαληθεύετε την ταυτότητά σας, για παράδειγμα, όταν συνδέεστε σε εφαρμογές"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Μπορείτε πλέον να χρησιμοποιείτε το δακτυλικό σας αποτύπωμα για να ξεκλειδώνετε το τηλέφωνό σας ή για να επαληθεύετε την ταυτότητά σας, για παράδειγμα, όταν συνδέεστε σε εφαρμογές"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Αργότερα"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Ανασηκώστε και αγγίξτε ξανά"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Τοποθετήστε τη μία πλευρά του δακτυλικού σας αποτυπώματος στον αισθητήρα και αγγίξτε παρατεταμένα, μετά τοποθετήστε την άλλη πλευρά."</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Αύξηση επιπέδου καταγραφής στοίβας NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Αρχείο λεπτομ. καταγραφής εντοπ. σφαλμάτων προμηθευτή NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Συμπερίληψη πρόσθετων αρχείων καταγραφής προμηθευτή για συγκεκριμένες συσκευές στις αναφορές σφαλμάτων, τα οποία ενδέχεται να περιέχουν ιδιωτικές πληροφορίες."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"Αρχείο καταγραφής NFC NCI χωρίς φιλτράρισμα"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Καταγραφή λεπτομερών πακέτων NFC, που ενδέχεται να περιέχουν ιδιωτικές πληροφορίες."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Επανεκκίνηση συσκευής;"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Η καταγραφή των λεπτομερειών NFC προορίζεται μόνο για σκοπούς ανάπτυξης. Επιπλέον δεδομένα NFC περιλαμβάνονται στις αναφορές σφαλμάτων, οι οποίες ενδέχεται να περιέχουν ιδιωτικές πληροφορίες. Επανεκκινήστε τη συσκευή σας για να αλλάξετε αυτήν τη ρύθμιση."</string>
@@ -1177,6 +1184,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Μη διαθέσιμο, ενεργή λειτουργία ώρας ύπνου."</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Χρήση προφύλαξης οθόνης"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Στη φόρτιση ή στη βάση"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"Στη βάση σύνδεσης κατά τη φόρτιση"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Στη φόρτιση"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Στη βάση"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Ποτέ"</string>
@@ -1465,8 +1473,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Κοινή χρήση της σύνδεσης του τηλεφώνου στο διαδίκτυο μέσω Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Σύνδεση Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Κοινή χρήση της σύνδεσης του τηλεφώνου στο διαδίκτυο μέσω Ethernet"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Κοινή χρήση της σύνδεσης του tablet στο διαδίκτυο μέσω Ethernet"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Χρησιμοποιήστε το σημείο πρόσβασης Wi-Fi και τη σύνδεση για να παρέχετε σύνδεση στο διαδίκτυο σε άλλες συσκευές, μέσω της σύνδεσης δεδομένων κινητής τηλεφωνίας που χρησιμοποιείτε. Οι εφαρμογές μπορούν επίσης να δημιουργούν ένα σημείο πρόσβασης Wi-Fi, για να μοιράζονται περιεχόμενο με κοντινές συσκευές."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Χρησιμοποιήστε το σημείο πρόσβασης Wi-Fi και τη σύνδεση, για να παρέχετε σύνδεση στο διαδίκτυο σε άλλες συσκευές, μέσω του δικτύου Wi-Fi ή της σύνδεσης δεδομένων κινητής τηλεφωνίας που χρησιμοποιείτε. Οι εφαρμογές μπορούν επίσης να δημιουργούν ένα σημείο πρόσβασης Wi-Fi, για να μοιράζονται περιεχόμενο με κοντινές συσκευές."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Βοήθεια"</string>
@@ -2937,10 +2944,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (συνιστάται)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Μηνύματα MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Αποστολή και λήψη όταν τα δεδομένα κινητής τηλεφωνίας είναι απενεργοποιημένα"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Αυτόματη εναλλαγή δεδομένων κινητής τηλεφωνίας"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Προσωρινή χρήση αυτού του δικτύου όταν έχει καλύτερη διαθεσιμότητα για κλήσεις και διαδίκτυο"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"SIM εργασίας"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Πρόσβαση σε εφαρμογές/περιεχόμενο"</string>
     <string name="user_rename" msgid="8735940847878484249">"ΜΕΤΟΝΟΜΑΣΙΑ"</string>
@@ -3452,6 +3457,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Μετά από αίτημά σας, το Android αποκλείει την εμφάνιση ειδοποιήσεων αυτής της εφαρμογής σε αυτήν τη συσκευή"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Μετά από αίτημά σας, το Android αποκλείει την εμφάνιση ειδοποιήσεων αυτής της κατηγορίας σε αυτήν τη συσκευή"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Μετά από αίτημά σας, το Android αποκλείει την εμφάνιση ειδοποιήσεων αυτής της ομάδας σε αυτήν τη συσκευή"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"Αυτή η εφαρμογή δεν στέλνει ειδοποιήσεις"</string>
     <string name="notification_channels" msgid="1502969522886493799">"Κατηγορίες"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Άλλα"</string>
     <string name="no_channels" msgid="4716199078612071915">"Αυτή η εφαρμογή δεν έχει δημοσιεύσει ειδοποιήσεις"</string>
@@ -4670,10 +4676,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Αλλαγή"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Συνδέθηκε"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Προσωρινή σύνδεση"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"Προσωρινή χρήση <xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Χωρίς σύνδεση"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Χωρίς αυτόματη σύνδεση δεδομένων κινητ. τηλεφωνίας"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Απενεργοποίηση δεδομένων κινητής τηλεφωνίας;"</string>
@@ -4758,7 +4762,8 @@
     <string name="tare_balances" msgid="731881382594747961">"Υπόλοιπο"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Όρια κατανάλωσης"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Όριο αρχικής κατανάλωσης"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Όριο μέγιστης κατανάλωσης"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Όριο ελάχιστης κατανάλωσης"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Όριο μέγιστης κατανάλωσης"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"Μεταβλητές"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Ενέργειες (Κόστος παραγωγής)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Ενέργειες (Βασική τιμή)"</string>
