--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"તમારા ચહેરાનું મૉડલ કાયમ માટે અને સુરક્ષિત રીતે ડિલીટ કરવામાં આવશે.\n\nડિલીટ કર્યા પછી, તમારો ફોન અનલૉક કરવા માટે, તમને તમારા પિન, પૅટર્ન કે પાસવર્ડની જરૂર રહેશે."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"તમારા ફોનને અનલૉક કરવા માટે ફેસ અનલૉક સુવિધાનો ઉપયોગ કરો"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"ફિંગરપ્રિન્ટ"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"ઑફિસ માટે ફિંગરપ્રિન્ટ"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"ફિંગરપ્રિન્ટ ઉમેરો"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"હવે તમે તમારું ટૅબ્લેટ અનલૉક કરવા અથવા સાઇન ઇન કરનાર તમે જ છો તેની ચકાસણી કરવા માટે તમારી ફિંગરપ્રિન્ટનો ઉપયોગ કરી શકો છો, જેમ કે જ્યારે તમે ઍપમાં સાઇન ઇન કરો ત્યારે"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"હવે તમે તમારું ડિવાઇસ અનલૉક કરવા અથવા સાઇન ઇન કરનાર તમે જ છો તેની ચકાસણી કરવા માટે તમારી ફિંગરપ્રિન્ટનો ઉપયોગ કરી શકો છો, જેમ કે જ્યારે તમે ઍપમાં સાઇન ઇન કરો ત્યારે"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"હવે તમે તમારો ફોન અનલૉક કરવા અથવા સાઇન ઇન કરનાર તમે જ છો તેની ચકાસણી કરવા માટે તમારી ફિંગરપ્રિન્ટનો ઉપયોગ કરી શકો છો, જેમ કે જ્યારે તમે ઍપમાં સાઇન ઇન કરો ત્યારે"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"આને થોડા સમય પછી કરો"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"ઉપાડો, પછી ફરી ટચ કરો"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"તમારી આંગળીને સેન્સર પર મૂકો અને દબાવી રાખો, પછી આંગળીના બીજા ભાગોને સેન્સર પર મૂકો"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC સ્ટૅકનું લૉગ ઇન કરવાનું લેવલ વધારો"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC શબ્દબહુલ વિક્રેતાનો ડિબગ લૉગ"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"બગ રિપોર્ટમાં ડિવાઇસ-વિશિષ્ટ વિક્રેતાના વધારાના લૉગ શામેલ કરો, જેમાં ખાનગી માહિતી હોઈ શકે છે."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFCનો NCI સંબંધિત ફિલ્ટર કર્યા વિનાનો લૉગ"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"NFCના વિગતવાર પૅકેટ કૅપ્ચર કરો, જેમાં ખાનગી માહિતી હોઈ શકે છે."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"શું ડિવાઇસને ફરી શરૂ કરીએ?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"NFCનું વિગતવાર લૉગ ઇન માત્ર ડેવલપમેન્ટના હેતુઓ માટે છે. બગ રિપોર્ટમાં વધારાનો NFC ડેટા શામેલ છે, જેમાં ખાનગી માહિતી હોઈ શકે છે. આ સેટિંગમાં ફેરફાર કરવા માટે, તમારા ડિવાઇસને ફરી શરૂ કરો."</string>
@@ -1177,6 +1184,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"ઉપલબ્ધ નથી, કારણ કે બેડટાઇમ મોડ ચાલુ છે"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"સ્ક્રીન સેવરનો ઉપયોગ કરો"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ચાર્જ થતું હોય અથવા ડૉક કરેલ હોય ત્યારે"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ચાર્જિંગ થતી વખતે"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"ડૉક હોય ત્યારે"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"ક્યારેય નહીં"</string>
@@ -1465,8 +1474,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ફોનનું ઇન્ટરનેટ કનેક્શન બ્લૂટૂથ મારફતે શેર કરો"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ઇથરનેટ ટિથરિંગ"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ઇથરનેટ મારફતે ફોનનું ઇન્ટરનેટ કનેક્શન શેર કરો"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ફોનનું ઇન્ટરનેટ કનેક્શન ઇથરનેટ મારફતે શેર કરો"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"તમારા મોબાઇલ ડેટા કનેક્શન મારફતે અન્ય ઉપકરણોને ઇન્ટરનેટ પૂરું પાડવા માટે હૉટસ્પૉટ અને ટિથરિંગનો ઉપયોગ કરો. નજીકના ઉપકરણો સાથે કન્ટેન્ટ શેર કરવા માટે ઍપ પણ હૉટસ્પૉટ બનાવી શકે છે."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"તમારા વાઇ-ફાઇ અથવા મોબાઇલ ડેટા કનેક્શન મારફત અન્ય ડિવાઇસને ઇન્ટરનેટ પૂરું પાડવા માટે હૉટસ્પૉટ અને ઇન્ટરનેટ શેર કરવાની સુવિધાનો ઉપયોગ કરો. ઍપ નજીકના ડિવાઇસ સાથે કન્ટેન્ટ શેર કરવા માટે પણ હૉટસ્પૉટ બનાવી શકે છે."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"સહાય"</string>
@@ -2937,10 +2945,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (ભલામણ કરેલ)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS સંદેશા"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"મોબાઇલ ડેટા બંધ હોય ત્યારે પણ સંદેશ મોકલો અને પ્રાપ્ત કરો"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"મોબાઇલ ડેટા ઑટોમૅટિક રીતે સ્વિચ કરો"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"જ્યારે કૉલ અને ઇન્ટરનેટ માટે બહેતર ઉપલબ્ધતા હોય, ત્યારે આ નેટવર્કનો હંગામી રીતે ઉપયોગ કરો"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"કાર્યાલય સિમ"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"ઍપ્લિકેશન અને કન્ટેન્ટ ઍક્સેસ"</string>
     <string name="user_rename" msgid="8735940847878484249">"નામ બદલો"</string>
@@ -3452,6 +3458,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"તમારી વિનંતી મુજબ Android આ ઍપના નોટિફિકેશનને આ ડિવાઇસ પર પ્રદર્શિત થતા બ્લૉક કરી રહ્યું છે"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"તમારી વિનંતી મુજબ Android આ ઍપના નોટિફિકેશનની કૅટેગરીને આ ડિવાઇસ પર પ્રદર્શિત થતા બ્લૉક કરી રહ્યું છે"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"તમારી વિનંતી મુજબ Android આ ઍપના નોટિફિકેશનના ગ્રૂપને આ ડિવાઇસ પર પ્રદર્શિત થતા બ્લૉક કરી રહ્યું છે"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"કૅટેગરી"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"અન્ય"</string>
     <string name="no_channels" msgid="4716199078612071915">"આ ઍપએ કોઈ નોટિફિકેશન પોસ્ટ કરી નથી"</string>
@@ -3873,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"તમારા ક્રેડિટ પ્રદાતાએ બ્લૉક કર્યું છે"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"માતાપિતાની હાજરી જરૂરી છે"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"આ સેટઅપ કરવા માટે, આ ફોન તમારા માતાપિતાને આપો"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"આ સેટિંગ બદલવાની મંજૂરી માટે ફોન તમારા માતાપિતાને આપો."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"વધુ માહિતી માટે, તમારા IT ઍડમિનનો સંપર્ક કરો"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"વધુ વિગતો"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"તમારા વ્યવસ્થાપક સેટિંગ, પરવાનગીઓ, કૉર્પોરેટ ઍક્સેસ, નેટવર્ક પ્રવૃત્તિ અને ડિવાઇસની સ્થાન માહિતી સહિત તમારી ઑફિસની પ્રોફાઇલ સાથે સંકળાયેલ ઍપ અને ડેટાને મૉનિટર અને મેનેજ કરી શકે છે."</string>
@@ -4671,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"બદલો"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"કનેક્ટ કરેલું"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"હંગામી રીતે કનેક્ટ કર્યું"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"હંગામી રીતે <xliff:g id="SUBNAME">%1$s</xliff:g>નો ઉપયોગ કરી રહ્યું છે"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"કોઈ કનેક્શન નથી"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"મોબાઇલ ડેટા ઑટોમૅટિક રીતે કનેક્ટ થશે નહીં"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"મોબાઇલ ડેટા બંધ કરીએ?"</string>
@@ -4759,7 +4764,10 @@
     <string name="tare_balances" msgid="731881382594747961">"બૅલેન્સ"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"વપરાશની સીમા"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"પ્રારંભિક વપરાશની સીમા"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"મહત્તમ વપરાશની સીમા"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"મૉડિફાયર"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"ક્રિયાઓ (ઉત્પાદન ખર્ચ)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"ક્રિયાઓ (મૂળ કિંમત)"</string>
