--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -363,6 +363,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"התבנית לזיהוי הפנים שלך תימחק באופן סופי ומאובטח.\n\nלאחר המחיקה, יהיה צורך בקוד האימות, בקו ביטול הנעילה או בסיסמה שלך כדי לבטל את נעילת הטלפון."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"שימוש בפתיחה ע\"י זיהוי הפנים לצורך ביטול הנעילה של הטלפון"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"טביעת אצבע"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"טביעת אצבע לעבודה"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"הוספת טביעת אצבע"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -494,6 +496,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"עכשיו אפשר להשתמש בטביעת האצבע כדי לבטל את הנעילה של הטאבלט או כדי לאמת את הזהות שלך, למשל בכניסה לאפליקציות"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"עכשיו אפשר להשתמש בטביעת האצבע כדי לבטל את נעילת המכשיר או כדי לאמת את הזהות שלך, למשל בכניסה לאפליקציות"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"עכשיו אפשר להשתמש בטביעת האצבע כדי לבטל את הנעילה של הטלפון או כדי לאמת את הזהות שלך, למשל בכניסה לאפליקציות"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"לא עכשיו"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"מרימים ונוגעים בחיישן שוב"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"מניחים צד אחד של האצבע על החיישן ומחזיקים. אחר כך עוברים לצד השני"</string>
@@ -827,8 +835,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"‏העלאת רמת הרישום של מקבץ NFC ביומן"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"‏יומן ניפוי באגים מפורט של ספקי NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"הוספת רישומי יומן של יצרנים למכשירים ספציפיים בדוחות על באגים. הדוחות האלה עשויים להכיל מידע פרטי."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"‏יומן NFC NCI ללא סינון"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"‏תיעוד של פרטי חבילות NFC, שעשויות להכיל מידע פרטי."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"להפעיל את המכשיר מחדש?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"‏הרישום ביומן של פרטי NFC מיועד למטרות פיתוח בלבד. נתוני NFC נוספים נכללים בדוחות על באגים, שעשויים להכיל מידע פרטי. צריך להפעיל מחדש את המכשיר כדי לשנות את ההגדרה."</string>
@@ -1221,6 +1228,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"אין זמינות כאשר מצב השינה מופעל"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"שימוש בשומר מסך"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"במהלך טעינה או עגינה"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"בזמן עגינה כשמתבצעת טעינה"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"במהלך טעינה"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"בזמן עגינה"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"אף פעם"</string>
@@ -1511,8 +1519,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"‏שיתוף האינטרנט של הטלפון דרך Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"שיתוף אינטרנט דרך אתרנט"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"שיתוף האינטרנט של הטלפון דרך אתרנט"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"שיתוף החיבור לאינטרנט של הטאבלט דרך אתרנט"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"‏בעזרת נקודה לשיתוף אינטרנט (hotspot) ושיתוף אינטרנט בין ניידים (tethering) אפשר לתת למכשירים אחרים להתחבר לאינטרנט דרך חבילת הגלישה שלך. יש גם אפליקציות ליצירת נקודת אינטרנט ולשיתוף תכנים בין מכשירים שנמצאים בקרבת מקום."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"‏נקודה לשיתוף אינטרנט (Hotspot) ושיתוף אינטרנט בין מכשירים (tethering) מאפשרים למכשירים אחרים להתחבר לאינטרנט דרך Wi-Fi או דרך חבילת הגלישה שלך. יש גם אפליקציות שמאפשרות ליצור נקודה לשיתוף אינטרנט ולשתף תכנים עם מכשירים קרובים."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"עזרה"</string>
@@ -3023,10 +3030,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"‏LTE (מומלץ)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"‏הודעות MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"שליחה וקבלה כשחבילת הגלישה מושבתת"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"החלפה אוטומטית לחבילת גלישה"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"יש להשתמש ברשת הזו באופן זמני כשיש בה זמינות טובה יותר לשיחות ולאינטרנט"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"‏SIM עבודה"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"גישה לאפליקציות ולתוכן"</string>
     <string name="user_rename" msgid="8735940847878484249">"שינוי שם"</string>
@@ -3546,6 +3551,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"‏לבקשתך, מערכת Android לא מאפשרת להציג במכשיר הזה התראות מהאפליקציה הזו"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"‏לבקשתך, מערכת Android לא מאפשרת להציג במכשיר הזה התראות ששייכות לקטגוריה הזו"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"‏לבקשתך, מערכת Android לא מאפשרת להציג במכשיר הזה התראות מקבוצה זו"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"האפליקציה הזו לא שולחת התראות"</string>
     <string name="notification_channels" msgid="1502969522886493799">"קטגוריות"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"אחר"</string>
     <string name="no_channels" msgid="4716199078612071915">"האפליקציה הזו לא שלחה התראות"</string>
@@ -4810,10 +4816,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"שינוי"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"מחובר"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"מחובר באופן זמני"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"עושה שימוש זמני ב<xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"אין חיבור"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"אין חיבור אוטו\' לחבילת הגלישה"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"לכבות את חבילת הגלישה?"</string>
@@ -4898,7 +4902,8 @@
     <string name="tare_balances" msgid="731881382594747961">"יתרות"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"מגבלות צריכה"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"מגבלת צריכה התחלתית"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"מגבלת צריכה מקסימלית"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"מגבלת צריכה מינימלית"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"מגבלת צריכה מקסימלית"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"גורמי שינוי"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"פעולות (עלות ייצור)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"פעולות (מחיר בסיסי)"</string>
@@ -4939,7 +4944,7 @@
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"הצגת מידע נוסף"</string>
     <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"הצגת פרטים כמו השעה, מזג האוויר ומידע אחר בשומר המסך"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"הגדרות נוספות"</string>
-    <string name="dream_setup_title" msgid="2458303874255396142">"בחירת שומר המסך"</string>
+    <string name="dream_setup_title" msgid="2458303874255396142">"בחירת שומר מסך"</string>
     <string name="dream_setup_description" msgid="7508547154038580296">"אפשר לבחור מה יוצג במסך כשהטאבלט בעגינה. יכול להיות שהמכשיר ינצל יותר אנרגיה בזמן השימוש בשומר מסך."</string>
     <string name="customize_button_title" msgid="1110284655990203359">"התאמה אישית"</string>
     <string name="reboot_dialog_enable_freeform_support" msgid="6412591361284929149">"צריך להפעיל מחדש כדי להפעיל את התמיכה במצב החופשי."</string>
