--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"თქვენი სახის მოდელი სამუდამოდ და უსაფრთხოდ წაიშლება.\n\nწაშლის შემდეგ ტელეფონის განბლოკვისთვის თქვენი PIN-კოდი, ნიმუში ან პაროლი დაგჭირდებათ."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"ტელეფონის განსაბლოკად გამოიყენეთ სახით განბლოკვა"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"თითის ანაბეჭდი"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"თითის ანაბეჭდი სამსახ."</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"თითის ანაბეჭდის დამატება"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"ახლა უკვე შეგიძლიათ თითის ანაბეჭდით ტაბლეტის განბლოკვა ან ვინაობის დადასტურება, როცა აპებში შედიხართ"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"ახლა უკვე შეგიძლიათ თითის ანაბეჭდით მოწყობილობის განბლოკვა ან ვინაობის დადასტურება, როცა აპებში შედიხართ"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"ახლა უკვე შეგიძლიათ თითის ანაბეჭდით ტელეფონის განბლოკვა ან ვინაობის დადასტურება, როცა აპებში შედიხართ"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"მოგვიანებით გაკეთება"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"აიღეთ თითი, შემდეგ კი ხელახლა შეეხეთ"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"დაადეთ თითის ცალი მხარე სენსორს და გააჩერეთ ცოტა ხნით, შემდეგ კი დაადეთ მეორე მხარე"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC დასტის ჟურნალის დონის გაზრდა"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC დეტალიზაციის გამყიდველის შეცდომების გამართვის ჟურნალი"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"გამყიდველის მოწყობილობისთვის სპეციფიკური დამატებითი ჟურნალები შევიდეს სისტემის ხარვეზის ანგარიშებში, რომლებიც შეიძლება შეიცავდეს პირად ინფორმაციას."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC NCI გაუფილტრავი ჟურნალი"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"აღბეჭდეთ დეტალური NFC პაკეტები, რომლებიც შეიძლება შეიცავდეს პირად ინფორმაციას."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"გსურთ მოწყობილობის გადატვირთვა?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"დეტალური NFC აღრიცხვა გათვალისწინებულია მხოლოდ დეველოპერული მიზნებისთვის. დამატებითი NFC მონაცემები მოყვანილია სისტემის ხარვეზის ანგარიშებში, რომლებიც შეიძლება მოიცავდეს პირად ინფორმაციას. გადატვირთეთ თქვენი მოწყობილობა ამ პარამეტრის შესაცვლელად."</string>
@@ -1177,6 +1184,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"მიუწვდომელია, რადგან ჩართულია ძილის დროის რეჟიმი"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"გამოიყენეთ ეკრანმზოგი"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"დატენვისას ან სანამ ჩამაგრებულია"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"დამაგრებისა და დატენვისას"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"დატენვისას"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"სანამ ჩამაგრებულია"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"არასოდეს"</string>
@@ -1465,8 +1473,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ტელეფონის ინტერნეტ-კავშირის Bluetooth-ით გაზიარება"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-ტეტერინგი"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ტელეფონის ინტერნეტ-კავშირის Ethernet-ის მეშვეობით გაზიარება"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ტაბლეტის ინტერნეტ-კავშირის Ethernet-ის მეშვეობით გაზიარება"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"უსადენო ქსელი და ტეტერინგი მობილური ინტერნეტის სხვა მოწყობილობებთან გაზიარების საშუალებას მოგცემთ. აპებს ასევე შეუძლიათ უსადენო ქსელის შექმნა, რათა გაუზიარონ კონტენტი ახლომდებარე მოწყობილობებს."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"უსადენო ქსელი და ტეტერინგი საშუალებას მოგცემთ, გაუზიაროთ მობილური ინტერნეტი ან Wi‑Fi კავშირი სხვა მოწყობილობებს. უსადენო ქსელის შექმნა შეუძლია აპებსაც, კონტენტის გასაზიარებლად ახლომახლო მოწყობილობებთან."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"დახმარება"</string>
@@ -2937,10 +2944,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (რეკომენდებული)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS შეტყობინებები"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"გაგზავნა და მიღება, როცა მობილური ინტერნეტი გამორთულია"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"მობილური მონაცემების ავტომატური გადართვა"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"ამ ქსელის დროებით გამოყენება, როდესაც უფრო მეტად ხელმისაწვდომი იქნება ზარებისა და ინტერნეტისთვის"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"სამუშაო SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"აპებზე &amp; ქონთენთზე წვდომა"</string>
     <string name="user_rename" msgid="8735940847878484249">"გადარქმევა"</string>
@@ -3452,6 +3457,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"თქვენი მოთხოვნის მიხედვით, Android ბლოკავს ამ აპის შეტყობინებების მოწყობილობაზე გამოჩენას"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"თქვენი მოთხოვნის მიხედვით, Android ბლოკავს შეტყობინებების ამ კატეგორიის მოწყობილობაზე გამოჩენას"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"თქვენი მოთხოვნის მიხედვით, Android ბლოკავს შეტყობინებების ამ ჯგუფის გამოჩენას მოწყობილობაზე"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"ეს აპი არ აგზავნის შეტყობინებებს"</string>
     <string name="notification_channels" msgid="1502969522886493799">"კატეგორიები"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"სხვა"</string>
     <string name="no_channels" msgid="4716199078612071915">"ამ აპს შეტყობინებები არ გამოუქვეყნებია"</string>
@@ -3873,8 +3879,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"დაბლოკილია თქვენი კრედიტის გამცემის მიერ"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"საჭიროა მშობელი"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"გადაეცით ტელეფონი მშობელს ამის დაყენების დასაწყებად"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"გადაეცით ტელეფონი თქვენს მშობელს იმისათვის, რომ შესაძლებელი იყოს მოცემული პარამეტრის შეცვლა."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"დამატებითი ინფორმაციისთვის დაუკავშირდით თქვენს IT ადმინისტრატორს"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"დაწვრილებით"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"თქვენს ადმინისტრატორს შეუძლია სამსახურის პროფილთან დაკავშირებული აპებისა და მონაცემების (მათ შორის, პარამეტრების, ნებართვების, კორპორაციული წვდომის, ქსელის აქტივობისა და თქვენი მოწყობილობის მდებარეობის ინფორმაციის) მონიტორინგი და მართვა."</string>
@@ -4671,10 +4676,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"შეცვლა"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"დაკავშირებული"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"დროებით დაკავშირებული"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"დროებით იყენებს <xliff:g id="SUBNAME">%1$s</xliff:g>-ს"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"კავშირი არ არის"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"მობილურ ინტერნეტს ავტომატურად არ დაუკავშირდება"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"გსურთ მობილური ინტერნეტის გამორთვა?"</string>
@@ -4759,7 +4762,8 @@
     <string name="tare_balances" msgid="731881382594747961">"ბალანსი"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"მოხმარების ლიმიტები"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"მოხმარების საწყისი ლიმიტი"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"მოხმარების მაქსიმალური ლიმიტი"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"მინიმალური მოხმარების ლიმიტი"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"მოხმარების მაქსიმალური ლიმიტი"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"მოდიფიკატორები"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"მოქმედებები (წარმოების ღირებულება)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"მოქმედებები (საბაზისო ფასი)"</string>
