--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Жүзүңүздүн үлгүсү биротоло өчүрүлөт.\n\nӨчүрүлгөндөн кийин телефонуңуздун кулпусун ачуу үчүн манжаңыздын изи, PIN код, графикалык ачкыч же сырсөз керек болот."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Телефонуңузду Жүзүнөн таанып ачуу функциясы менен ачыңыз"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Манжа изи"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Жумуш үчүн манжа изи"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Манжа изин кошуу"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Эми манжаңыздын изи менен планшетиңиздин кулпусун ачып же колдонмолорго кирүүдө өзүңүздү ырастайсыз"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Эми манжаңыздын изи менен түзмөгүңүздүн кулпусун ачып же колдонмолорго кирүүдө өзүңүздү ырастайсыз"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Эми манжаңыздын изи менен телефонуңуздун кулпусун ачып же колдонмолорго кирүүдө өзүңүздү ырастайсыз"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Азыр эмес"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Көтөрүп, кайра тийип коюңуз"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Манжаңызды сенсорго капталдатып коюп, кармап туруңуз, андан кийин башка капталдарын коюңуз"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC топтомун жайгаштыруу деңгээлин жогорулатуу"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Мүчүлүштүктөрдү оңдоо үчүн NFC\'деги кепти дааналатууну жайгаштыруу"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Кызмат көрсөтүүчүнүн түзмөккө байланыштуу кошумча жазуулары мүчүлүштүк тууралуу кабарларга кошулат. Анда купуя маалымат камтылышы мүмкүн."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"Чыпкаланбаган NFC NCI журналы"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Купуя маалымат камтылышы мүмкүн болгон NFC\'нин толук маалыматын тартып алыңыз."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Түзмөк өчүп күйсүнбү?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"NFC\'нин толук маалыматы менен кирүү иштеп чыгуу максатында гана колдонулат. NFC\'нин кошумча маалыматы мүчүлүштүк тууралуу кабарларга кошулат. Анда купуя маалымат камтылышы мүмкүн. Бул параметрди өзгөртүү үчүн түзмөгүңүздү өчүрүп күйгүзүңүз."</string>
@@ -1177,6 +1184,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Уйку режиминде иштебейт"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Көшөгөнү колдонуу"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Кубатталып жатканда же док-станцияга туташканда"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Кубатталып жатканда"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Док-станцияда"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Эч качан"</string>
@@ -1465,8 +1474,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Телефондун Интернетин Bluetooth аркылуу бөлүшөсүз"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet модем режими"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Телефондогу Интернетти Ethernet аркылуу бөлүшөсүз"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Планшеттин Интернетин Ethernet аркылуу бөлүшүү"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Башка түзмөктөрдү мобилдик Интернетке туташтыруу үчүн байланыш түйүнүн же модем режимин колдонуңуз. Колдонмолор да жакын жердеги түзмөктөр менен мазмун бөлүшүү үчүн байланыш түйүнүн түзө алышат."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Башка түзмөктөрдү Wi‑Fi же мобилдик Интернетке туташтыруу үчүн байланыш түйүнүн же модем режимин колдонуңуз. Ошондой эле, колдонмолор жакын жердеги түзмөктөр менен кандайдыр бир нерселерди бөлүшүү үчүн байланыш түйүндөрүн түзө алышат."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Жардам"</string>
@@ -2937,10 +2945,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (сунушталат)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS билдирүүлөр"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"MMS билдирүүлөрдү мобилдик Интернет өчүк кезде жөнөтүп, кабыл аласыз"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Мобилдик Интернетти автоматтык түрдө которуу"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Чалуулар менен Интернеттин сапаты жакшы болгондо убактылуу ушул тармакты колдонуу"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Жумуш SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Колдон жана мазмунду пайдал мүмкүнч"</string>
     <string name="user_rename" msgid="8735940847878484249">"АТ АЛМАШТЫРУУ"</string>
@@ -3452,6 +3458,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Өтүнүчүңүз боюнча Android бул колдонмонун билдирмелерин бул түзмөктө көрсөтпөй, жашырып жатат"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Суранычыңыз боюнча Android ушул категориядагы билдирмелерди бул түзмөктөн көрсөтпөй, бөгөттөп жатат"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Суранычыңыз боюнча Android ушул категориядагы билдирмелерди бул түзмөктөн көрсөтпөй, бөгөттөп жатат"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"Категориялар"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Башка"</string>
     <string name="no_channels" msgid="4716199078612071915">"Бул колдонмодон эч кандай билдирме келген жок"</string>
@@ -3873,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Насыя берүүчү тарабынан бөгөттөлдү"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ата-эненин макулдугу керек"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Муну жөндөп баштоо үчүн телефонду ата-энеңе бер"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Бул параметрди өзгөртүү үчүн телефонду ата-энеңе бер."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Кеңири маалымат алуу үчүн IT администраторуңузга кайрылыңыз"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Көбүрөөк маалымат"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Администратор жумуш профилиңизге байланыштуу колдонмолор менен маалыматтарды, анын ичинде жөндөөлөр, уруксаттар, корпоративдик кирүү мүмкүнчүлүгү, Интернеттеги аракеттери жана түзмөктүн жайгашкан жери тууралуу маалыматты көзөмөлдөй алат."</string>
@@ -4671,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Өзгөртүү"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Туташты"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Убактылуу туташып турат"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"<xliff:g id="SUBNAME">%1$s</xliff:g> убактылуу колдонулууда"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Байланыш жок"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Мобилдик Интернетке автоматтык түрдө туташпайт"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Мобилдик трафик өчүрүлсүнбү?"</string>
@@ -4759,7 +4764,10 @@
     <string name="tare_balances" msgid="731881382594747961">"Баланстар"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Керектөөгө коюлган чектөөлөр"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Керектөөгө коюлган баштапкы чектөө"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Керектөөгө коюлган максималдуу чектөө"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"Өзгөрткүчтөр"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Аракеттер (Өндүрүү наркы)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Аракеттер (Негизги баа)"</string>
