--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -360,6 +360,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Jūsu sejas modelis tiks neatgriezeniski un droši izdzēsts.\n\nPēc tā dzēšanas jums būs jāizmanto PIN, kombinācija vai parole, lai atbloķētu savu tālruni."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Izmantot tālruņa atbloķēšanai autorizāciju pēc sejas"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Pirkstu nospiedumi"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Pirksta nospiedums darbam"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Pievienot pirksta nospiedumu"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -486,6 +488,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Tagad varat izmantot pirksta nospiedumu, lai atbloķētu planšetdatoru vai apstiprinātu savu identitāti, piemēram, pierakstoties lietotnēs."</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Tagad varat izmantot pirksta nospiedumu, lai atbloķētu ierīci vai apstiprinātu savu identitāti, piemēram, pierakstoties lietotnēs."</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Tagad varat izmantot pirksta nospiedumu, lai atbloķētu tālruni vai apstiprinātu savu identitāti, piemēram, pierakstoties lietotnēs."</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Vēlāk"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Paceliet un vēlreiz pieskarieties"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Novietojiet pirksta sānu uz sensora un turiet, bet pēc tam novietojiet otru pirksta sānu"</string>
@@ -806,8 +814,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Palielināt NFC steka reģistrēšanas līmeni"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Detalizēti NFC nodrošinātāju atkļūdošanas žurnāli"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Iekļaut kļūdu pārskatos konkrētas ierīces papildu nodrošinātāju žurnālus, kuros var būt ietverta privāta informācija."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC NCI nefiltrētas uzskaites žurnāls"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Tvert detalizētu NFC datu paketes, kurās var būt ietverta privāta informācija."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Vai restartēt ierīci?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Detalizētu NFC datu reģistrēšana ir paredzēta tikai ar izstrādi saistītiem nolūkiem. Papildu NFC dati tiek iekļauti kļūdu pārskatos, un tajos var būt ietverta privāta informācija. Lai mainītu šo iestatījumu, restartējiet ierīci."</string>
@@ -1197,6 +1204,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Nav pieejams, jo ir ieslēgts naktsmiera režīms"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Izmantot ekrānsaudzētāju"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Uzlādes vai dokošanas laikā"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Uzlādes laikā"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Kamēr tiek dokots"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Nekad"</string>
@@ -1486,8 +1495,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Koplietojiet tālruņa interneta savienojumu, izmantojot Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet piesaiste"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Koplietojiet tālruņa interneta savienojumu, izmantojot tīklu Ethernet."</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Koplietojiet planšetdatora interneta savienojumu, izmantojot tīklu Ethernet"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Izmantojiet tīklāju un piesaisti, lai varētu lietot internetu citās ierīcēs, izveidojot mobilo datu savienojumu. Lietotnes var arī izveidot tīklāju satura kopīgošanai ar tuvumā esošajām ierīcēm."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Izmantojot tīklāju un piesaisti, jūsu ierīces Wi-Fi vai mobilo datu savienojums var nodrošināt interneta savienojumu citām ierīcēm. Lietotnes var arī izveidot tīklāju satura kopīgošanai ar tuvumā esošajām ierīcēm."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Palīdzība"</string>
@@ -2978,10 +2986,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (ieteicams)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Multiziņas"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Sūtīt un saņemt multiziņas, kad ir izslēgti mobilie dati"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Automātiski pārslēgt mobilos datus"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Īslaicīgi izmantot šo tīklu, kad tam ir labāka pieejamība zvaniem un interneta savienojumam"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Darba SIM karte"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Piekļuve lietotnēm un saturam"</string>
     <string name="user_rename" msgid="8735940847878484249">"PĀRDĒVĒT"</string>
@@ -3497,6 +3503,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Pēc jūsu pieprasījuma Android neatļauj šīs lietotnes paziņojumu rādīšanu šajā ierīcē."</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Pēc jūsu pieprasījuma Android neatļauj šīs kategorijas paziņojumu rādīšanu šajā ierīcē."</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Pēc jūsu pieprasījuma Android neatļauj šīs grupas paziņojumu rādīšanu šajā ierīcē."</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"Kategorijas"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Cits"</string>
     <string name="no_channels" msgid="4716199078612071915">"Šai lietotnei nav neviena paziņojuma."</string>
@@ -3929,8 +3937,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Bloķējis jūsu kredīta nodrošinātājs"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Nepieciešama vecāku palīdzība"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Iedodiet tālruni vienam no vecākiem, lai sāktu iestatīšanu."</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Iedodiet tālruni kādam no vecākiem, kas var apstiprināt šī iestatījuma mainīšanu."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Lai iegūtu plašāku informāciju, sazinieties ar savu IT administratoru."</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Plašāka informācija"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administrators var pārraudzīt un pārvaldīt ar jūsu darba profilu saistītās lietotnes un datus, tostarp iestatījumus, atļaujas, korporatīvo piekļuvi, darbības tīklā un informāciju par ierīces atrašanās vietu."</string>
@@ -4739,10 +4746,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Mainīt"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Ir izveidots savienojums"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Īslaicīgi izveidots savienojums"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"Īslaicīgi tiek izmantots pakalpojums <xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Nav savienojuma"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobilo datu savienojums netiks veidots automātiski"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Vai izslēgt mobilos datus?"</string>
@@ -4827,7 +4832,10 @@
     <string name="tare_balances" msgid="731881382594747961">"Atlikumi"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Patēriņa ierobežojumi"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Sākotnējais patēriņa ierobežojums"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Maksimālais patēriņa ierobežojums"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"Pārveidotāji"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Darbības (izveides cena)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Darbības (pamatcena)"</string>
