--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"നിങ്ങളുടെ മുഖ മോഡൽ ശാശ്വതമായും സുരക്ഷിതമായും ഇല്ലാതാക്കും.\n\n ഇല്ലാതാക്കിയാൽ, ഫോൺ അൺലോക്ക് ചെയ്യാൻ പിൻ, പാറ്റേൺ അല്ലെങ്കിൽ പാസ്‍വേഡ് വേണ്ടി വരും."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"നിങ്ങളുടെ ഫോൺ അൺലോക്ക് ചെയ്യാൻ ഫെയ്‌സ് അൺലോക്ക് ഉപയോഗിക്കുക"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"ഫിംഗർപ്രിന്റ്"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"ഔദ്യോഗിക ഫിംഗർപ്രിന്റ്"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"ഫിംഗർപ്രിന്റ് ചേർക്കുക"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"ടാബ്‌ലെറ്റ് അൺലോക്ക് ചെയ്യാനോ ആപ്പുകളിലേക്ക് സൈൻ ഇൻ ചെയ്യുന്നത് പോലുള്ള സന്ദർഭങ്ങളിൽ ഇത് നിങ്ങൾ തന്നെയാണെന്ന് പരിശോധിച്ചുറപ്പിക്കാനോ ഇപ്പോൾ നിങ്ങളുടെ ഫിംഗർപ്രിന്റ് ഉപയോഗിക്കാനാകും"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"ഉപകരണം അൺലോക്ക് ചെയ്യാനോ ആപ്പുകളിലേക്ക് സൈൻ ഇൻ ചെയ്യുന്നത് പോലുള്ള സന്ദർഭങ്ങളിൽ ഇത് നിങ്ങൾ തന്നെയാണെന്ന് പരിശോധിച്ചുറപ്പിക്കാനോ ഇപ്പോൾ നിങ്ങളുടെ ഫിംഗർപ്രിന്റ് ഉപയോഗിക്കാനാകും"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"ഫോൺ അൺലോക്ക് ചെയ്യാനോ ആപ്പുകളിലേക്ക് സൈൻ ഇൻ ചെയ്യുന്നത് പോലുള്ള സന്ദർഭങ്ങളിൽ ഇത് നിങ്ങൾ തന്നെയാണെന്ന് പരിശോധിച്ചുറപ്പിക്കാനോ ഇപ്പോൾ നിങ്ങളുടെ ഫിംഗർപ്രിന്റ് ഉപയോഗിക്കാനാകും"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"ഇത് പിന്നീട് ചെയ്യുക"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"വിരലെടുക്കുക, വീണ്ടും സ്‌പർശിക്കുക"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"നിങ്ങളുടെ ഫിംഗർപ്രിന്റിന്റെ വശം സെൻസറിൽ വച്ച് അമർത്തിപ്പിടിക്കുക, തുടർന്ന് മറ്റേ വശം നൽകുക"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC സ്റ്റാക്ക് ലോഗിംഗ് ലെവൽ ഉയർത്തുക"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC വെർബോസ് വെണ്ടർ ഡീബഗ് ലോഗ്"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"ബഗ്റിപ്പോർട്ടുകളിൽ ഉപകരണത്തിന് പ്രത്യേകമായുള്ള അധിക ലോഗുകൾ ഉൾപ്പെടുത്തുക, അവയിൽ സ്വകാര്യ വിവരങ്ങൾ അടങ്ങിയേക്കാം."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC NCI ഫിൽട്ടർ ചെയ്യാത്ത ലോഗ്"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"വിശദമായ NFC പാക്കറ്റുകൾ ക്യാപ്‌ചർ ചെയ്യുക, അവയിൽ സ്വകാര്യ വിവരങ്ങൾ അടങ്ങിയിരിക്കാം."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"ഉപകരണം റീസ്റ്റാർട്ട് ചെയ്യണോ?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"ഡെവലപ്പ്മെന്റ് ആവശ്യങ്ങൾക്ക് മാത്രം ഉദ്ദേശിച്ചുള്ളതാണ് വിശദമായ NFC ലോഗ് ചെയ്യൽ. ബഗ് റിപ്പോർട്ടുകളിൽ അധിക NFC ഡാറ്റ ഉൾപ്പെടുത്തിയിരിക്കുന്നു, അവയിൽ സ്വകാര്യ വിവരങ്ങൾ അടങ്ങിയിരിക്കാം. ഈ ക്രമീകരണം മാറ്റാൻ നിങ്ങളുടെ ഉപകരണം റീസ്റ്റാർട്ട് ചെയ്യുക."</string>
@@ -1177,6 +1184,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"ഉറക്ക സമയ മോഡ് ഓണായതിനാൽ ലഭ്യമല്ല"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"സ്ക്രീൻ സേവർ ഉപയോഗിക്കുക"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ചാർജ്/ഡോക്ക് ചെയ്യുമ്പോൾ"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"ഡോക്ക് ചെയ്ത് ചാർജ് ചെയ്യുമ്പോൾ"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ചാർജ് ചെയ്യുമ്പോൾ"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"ഡോക്ക് ചെയ്‌തിരിക്കുമ്പോൾ"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"ഒരിക്കലും വേണ്ട"</string>
@@ -1465,8 +1473,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Bluetooth വഴി, ഫോണിന്‍റെ ഇന്‍റർനെറ്റ് കണക്ഷൻ പങ്കിടുക"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ഇതർനെറ്റ് ടെതറിംഗ്"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ഇതർനെറ്റ് വഴി ഫോണിന്റെ ഇന്റർനെറ്റ് കണക്ഷൻ പങ്കിടുക"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ഇതർനെറ്റ് വഴി ടാബ്‌ലെറ്റിന്റെ ഇന്റർനെറ്റ് കണക്ഷൻ പങ്കിടുക"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"നിങ്ങളുടെ മൊബൈൽ ഡാറ്റാ കണക്ഷനിലൂടെ മറ്റ് ഉപകരണങ്ങളിലേക്ക് ഇന്‍റർനെറ്റ് നൽകാൻ ഹോട്ട്‌സ്പോട്ടും ‌ടെതറിംഗും ഉപയോഗിക്കുക. ചുറ്റുവട്ടത്തുള്ള ഉപകരണങ്ങളുമായി ഉള്ളടക്കം പങ്കിടാൻ ആപ്പുകൾക്കും ഹോട്ട്‌സ്പോട്ട് സൃഷ്ടിക്കാൻ കഴിയും."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"നിങ്ങളുടെ വൈഫൈ വഴിയോ മൊബൈൽ ഡാറ്റാ കണക്ഷൻ വഴിയോ മറ്റ് ഉപകരണങ്ങളിലേക്ക് ഇന്റർനെറ്റ് നൽകാൻ ഹോട്ട്‌സ്പോട്ടും ടെതറിംഗും ഉപയോഗിക്കുക. സമീപമുള്ള ഉപകരണങ്ങളുമായി ഉള്ളടക്കം പങ്കിടാൻ ആപ്പുകൾക്ക് ഹോട്ട്‌സ്പോട്ട് സൃഷ്‌ടിക്കാനുമാവും."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"സഹായം"</string>
@@ -2937,10 +2944,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (ശുപാർശചെയ്‌തത്)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS സന്ദേശങ്ങൾ"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"മൊബൈൽ ഡാറ്റ ഓഫായിരിക്കുമ്പോൾ അയയ്ക്കുകയും സ്വീകരിക്കുകയും ചെയ്യുക"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"മൊബൈൽ ഡാറ്റ സ്വയമേവ മാറ്റുക"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"കോളുകൾക്കും ഇന്റർനെറ്റിനും ആവശ്യമായ ലഭ്യത ഉള്ളപ്പോൾ, ഈ നെറ്റ്‌വർക്ക് താൽക്കാലികമായി ഉപയോഗിക്കുക"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"ഔദ്യോഗിക സിം"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"അപ്ലിക്കേഷൻ &amp; ഉള്ളടക്ക ആക്‌സസ്സ്"</string>
     <string name="user_rename" msgid="8735940847878484249">"പേരുമാറ്റുക"</string>
@@ -3452,6 +3457,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"നിങ്ങളുടെ അഭ്യർത്ഥനപ്രകാരം, ഈ ഉപകരണത്തിൽ ഈ ആപ്പിന്‍റെ അറിയിപ്പുകൾ ദൃശ്യമാകുന്നത് Android ബ്ലോക്ക് ചെയ്യുന്നു"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"നിങ്ങളുടെ അഭ്യർത്ഥനപ്രകാരം, ഈ ഉപകരണത്തിൽ ഈ വിഭാഗത്തിൽപ്പെട്ട അറിയിപ്പുകൾ ദൃശ്യമാകുന്നത് Android ബ്ലോക്ക് ചെയ്യുന്നു"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"നിങ്ങളുടെ അഭ്യർത്ഥനപ്രകാരം, ഈ ഗ്രൂപ്പിൽപ്പെട്ട അറിയിപ്പുകൾ ഈ ഉപകരണത്തിൽ ദൃശ്യമാകുന്നത് Android ബ്ലോക്ക് ചെയ്യുന്നു"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"ഈ ആപ്പ് അറിയിപ്പുകൾ അയയ്ക്കുന്നില്ല"</string>
     <string name="notification_channels" msgid="1502969522886493799">"വിഭാഗങ്ങള്‍"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"മറ്റുള്ളവ"</string>
     <string name="no_channels" msgid="4716199078612071915">"ഈ ആപ്പ് അറിയിപ്പുകളൊന്നും പോസ്‌റ്റ് ചെയ്‌തിട്ടില്ല"</string>
@@ -4670,10 +4676,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"മാറ്റുക"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"കണക്റ്റ് ചെയ്തു"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"താൽക്കാലികമായി കണക്റ്റ് ചെയ്തിരിക്കുന്നു"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"താൽക്കാലികമായി <xliff:g id="SUBNAME">%1$s</xliff:g> ഉപയോഗിക്കുന്നു"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"കണക്ഷനില്ല"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"മൊബൈൽ ഡാറ്റ സ്വയമേവ കണക്റ്റാകില്ല"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"മൊബൈൽ ഡാറ്റ ഓഫാക്കണോ?"</string>
@@ -4758,7 +4762,8 @@
     <string name="tare_balances" msgid="731881382594747961">"ബാലൻസ്"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"ഉപഭോഗ പരിധി"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"പ്രാഥമിക ഉപഭോഗ പരിധി"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"പരമാവധി ഉപഭോഗ പരിധി"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"ഏറ്റവും കുറഞ്ഞ ഉപയോഗ പരിധി"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"പരമാവധി ഉപഭോഗ പരിധി"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"മോഡിഫയറുകൾ"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"പ്രവർത്തനങ്ങൾ (നിർമ്മാണ ചെലവ്)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"പ്രവർത്തനങ്ങൾ (അടിസ്ഥാന നിരക്ക്)"</string>
