--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Таны нүүрний загварыг аюулгүйгээр бүрмөсөн устгана.\n\nУстгасны дараа та утасныхаа түгжээг тайлахын тулд ПИН, хээ эсвэл нууц үгээ оруулах шаардлагатай болно."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Утасныхаа түгжээг тайлахын тулд Царайгаар түгжээ тайлахыг ашиглана уу"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Хурууны хээ"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Ажлын зориулалтаар ашиглах хурууны хээ"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Хурууны хээ нэмэх"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Одоо та хурууны хээгээ таблетынхаа түгжээг тайлах эсвэл аппуудад нэвтрэх зэргээр өөрийгөө мөн болохыг баталгаажуулахын тулд ашиглах боломжтой"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Одоо та хурууны хээгээ төхөөрөмжийнхөө түгжээг тайлах эсвэл аппуудад нэвтрэх зэргээр өөрийгөө мөн болохыг баталгаажуулахын тулд ашиглах боломжтой"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Одоо та хурууны хээгээ утасныхаа түгжээг тайлах эсвэл аппуудад нэвтрэх зэргээр өөрийгөө мөн болохыг баталгаажуулахын тулд ашиглах боломжтой"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Дараа хийх"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Хөндийрүүлээд, дахин хүрнэ үү"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Хурууныхаа хээний хажуу талыг мэдрэгч дээр удаан байрлуулж, дараа нь нөгөө тал руу сэлгэнэ үү"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC стекийн логийн түвшнийг нэмэгдүүлэх"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC нуршсан дэлгэрэнгүй байдлын нийлүүлэгчийн дебагийн лог"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Төхөөрөмж заасан нийлүүлэгчийн нэмэлт логийг алдааны мэдээнд багтаах бөгөөд энэ нь хувийн мэдээлэл агуулж байж магадгүй."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC NCI-н шүүгээгүй лог"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Нарийвчилсан NFC-н пакетыг авах бөгөөд энэ нь хувийн мэдээлэл агуулж байж магадгүй."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Төхөөрөмжийг дахин эхлүүлэх үү?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Нарийвчилсан NFC лог нь зөвхөн хөгжүүлэлтийн зориулалттай. Нэмэлт NFC өгөгдлийг алдааны мэдээнд багтаасан бөгөөд энэ нь хувийн мэдээлэл агуулж байж магадгүй. Энэ тохиргоог өөрчлөхийн тулд төхөөрөмжөө дахин эхлүүлнэ үү."</string>
@@ -1177,6 +1184,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Унтлагын цагийн горим асаалттай тул боломжгүй"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Дэлгэц амраагчийг ашиглах"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Цэнэглэх эсвэл суурилуулах үед"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"Суурилуулсан бөгөөд цэнэглэж байхад"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Цэнэглэж байх үед"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Док дээр суурилуулсан үед"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Хэзээ ч үгүй"</string>
@@ -1465,8 +1473,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Утасны интернэт холболтыг Bluetooth-р хуваалцах"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet модем болгох"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Утасны интернэт холболтыг Ethernet-р хуваалцах"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Таблетын интернэт холболтыг Этернэтээр хуваалцах"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Мобайл дата холболтоороо бусад төхөөрөмжид интернет холболт цацахын тулд сүлжээний цэг, модем болгохыг ашиглана уу. Апп ойролцоох төхөөрөмжид агуулга хуваалцахын тулд сүлжээний цэг үүсгэх боломжтой."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Wi-Fi эсвэл мобайл дата холболтоороо бусад төхөөрөмжид интернэт цацахын тулд сүлжээний цэг болон модем болгохыг ашиглана уу. Түүнчлэн, аппууд ойролцоох төхөөрөмжүүдтэй контент хуваалцахын тулд сүлжээний цэг үүсгэх боломжтой."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Тусламж"</string>
@@ -2937,10 +2944,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (зөвлөмж болгосон)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Мультимедиа мессеж"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Мобайл дата унтраалттай үед илгээх болон хүлээн авах"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Мобайл дата автоматаар сэлгэх"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Энэ сүлжээг дуудлага болон интернэтэд илүү сайн сүлжээтэй үед түр зуур ашиглах"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Ажлын SIM"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Апп &amp; контентэд хандах"</string>
     <string name="user_rename" msgid="8735940847878484249">"НЭР ӨӨРЧЛӨХ"</string>
@@ -3452,6 +3457,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Андройд таны хүсэлтээр энэ аппын мэдэгдлийг энэ төхөөрөмжид харуулахыг хориглож байна"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Андройд таны хүсэлтээр энэ ангиллын мэдэгдлийг тус төхөөрөмжид харуулахыг хориглож байна"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Андройд таны хүсэлтээр энэ бүлэг мэдэгдлийг энэ төхөөрөмжид харуулахыг хориглож байна"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"Энэ апп мэдэгдэл илгээдэггүй"</string>
     <string name="notification_channels" msgid="1502969522886493799">"Ангилал"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Бусад"</string>
     <string name="no_channels" msgid="4716199078612071915">"Энэ апп ямар ч мэдэгдэл нийтлээгүй"</string>
@@ -3873,8 +3879,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Таны кредит олгогчоос блоклосон"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Эцэг эх шаардлагатай"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Үүнийг тохируулж эхлэхийн тулд утсыг эцэг эхдээ өгнө үү"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Энэ тохиргоог өөрчлөхийг зөвшөөрөхийн тулд утсаа эцэг эхдээ өгнө үү."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Дэлгэрэнгүй мэдээлэл авах бол IT админтайгаа холбогдоно уу"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Илүү дэлгэрэнгүй"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Тохиргоо, зөвшөөрөл, байгууллагын хандалт, сүлжээний үйл ажиллагаа болон төхөөрөмжийн байршлын мэдээлэл зэрэг таны ажлын профайлтай холбоотой апп, өгөгдлийг таны админ удирдаж, хянах боломжтой."</string>
@@ -4671,10 +4676,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Өөрчлөх"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Холбогдсон"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Түр зуур холбогдсон"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"<xliff:g id="SUBNAME">%1$s</xliff:g>-г түр зуур ашиглаж байна"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Холболт алга"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Мобайл дата автоматаар холбогдохгүй"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Мобайл датаг унтраах уу?"</string>
@@ -4759,7 +4762,8 @@
     <string name="tare_balances" msgid="731881382594747961">"Үлдэгдэл"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Зарцуулалтын хязгаар"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Зарцуулалтын анхны хязгаар"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Зарцуулалтын дээд хязгаар"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Зарцуулалтын доод хязгаар"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Зарцуулалтын дээд хязгаар"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"Засварлагчид"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Үйлдэл (Үйлдвэрлэх зардал)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Үйлдэл (Үндсэн үнэ)"</string>
