--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"तुमचे फेस मॉडेल कायमचे आणि सुरक्षितरीत्या हटवले जाईल.\n\nहटवल्यानंतर, तुमचा फोन अनलॉक करण्यासाठी तुम्हाला तुमचा पिन, पॅटर्न किंवा पासवर्ड लागेल."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"तुमचा फोन अनलॉक करण्यासाठी फेस अनलॉक वापरा"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"फिंगरप्रिंट"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"ऑफिससाठी फिंगरप्रिंट"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"फिंगरप्रिंट जोडा"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"तुम्ही ॲप्समध्ये साइन इन करता, तेव्हा तुमचा टॅबलेट अनलॉक करण्यासाठी किंवा ते तुम्हीच आहात याची पडताळणी करण्यासाठी तुम्ही आता तुमची फिंगरप्रिंट वापरू शकता"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"तुम्ही ॲप्समध्ये साइन इन करता, तेव्हा तुमचे डिव्हाइस अनलॉक करण्यासाठी किंवा ते तुम्हीच आहात याची पडताळणी करण्यासाठी तुम्ही आता तुमची फिंगरप्रिंट वापरू शकता"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"तुम्ही ॲप्समध्ये साइन इन करता, तेव्हा तुमचा फोन अनलॉक करण्यासाठी किंवा ते तुम्हीच आहात याची पडताळणी करण्यासाठी तुम्ही आता तुमची फिंगरप्रिंट वापरू शकता"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"हे नंतर करा"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"उचला, त्यानंतर पुन्हा स्पर्श करा"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"तुमची फिंगरप्रिंट घ्यायची असलेली एक बाजू सेन्सरवर ठेवा आणि धरून ठेवा, त्यानंतर दुसऱ्या बाजूवर स्विच करा"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC स्टॅक लॉग करण्याची पातळी वाढवा"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC व्हर्बोझ विक्रेता डीबग लॉग"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"बगरिपोर्टमध्ये अतिरिक्त डिव्हाइस विशिष्ट विक्रेता लॉगचा समावेश करा, ज्यामध्ये खाजगी माहितीचा समावेश असू शकतो."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC चा NCI शी संबंधित फिल्टर न केलेला लॉग"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"तपशीलवार NFC पॅकेट कॅप्चर करा, ज्यामध्ये खाजगी माहितीचा समावेश असू शकतो."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"डिव्हाइस रीस्टार्ट करायचे आहे का?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"तपशीलवार NFC लॉगिंग हे फक्त विकासाच्या उद्देशाने आहे. बग रिपोर्टमध्ये अतिरिक्त NFC डेटाचा समावेश केला आहे, ज्यामध्ये खाजगी माहितीचा समावेश असू शकतो. हे सेटिंग बदलण्यासाठी तुमचे डिव्हाइस रीस्टार्ट करा."</string>
@@ -1177,6 +1184,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"बेडटाइम मोड सुरू असल्यामुळे उपलब्ध नाही"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"स्क्रीन सेव्हर वापरा"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"चार्ज होत असताना किंवा डॉक केलेले असताना"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"डॉक केले असताना किंवा चार्ज करताना"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"चार्ज होत असताना"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"डॉक केलेले असताना"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"कधीही नाही"</string>
@@ -1465,8 +1473,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"फोनचे इंटरनेट कनेक्शन ब्लूटूथने शेअर करा"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"इथरनेट टेदरिंग"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"फोनचे इंटरनेट कनेक्शन इथरनेटमार्फत शेअर करा"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"टॅबलेटचे इंटरनेट कनेक्शन इथरनेटने शेअर करा"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"तुमच्या मोबाइल डेटा कनेक्शनने इतर डिव्हाइसना इंटरनेट देण्यासाठी हॉटस्पॉट आणि टेदरिंगचा वापर करा. जवळपासच्या डिव्हाइससोबत आशय शेअर करण्यासाठी अ‍ॅप्स हॉटस्‍पॉट देखील तयार करू शकतात."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"तुमच्या मोबाइल डेटा कनेक्शन किंवा वाय-फाय द्वारे इतर डिव्हाइसना इंटरनेट पुरवण्यासाठी हॉटस्पॉट आणि टेदरिंगचा वापर करा. जवळपासच्या डिव्हाइससह आशय शेअर करण्यासाठी अ‍ॅप्स हॉटस्पॉटदेखील तयार करू शकतात."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"मदत"</string>
@@ -2937,10 +2944,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (शिफारस केलेले)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS मेसेज"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"मोबाइल डेटा बंद असताना पाठवा आणि मिळवा"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"मोबाइल डेटा आपोआप स्विच करा"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"कॉल आणि इंटरनेटसाठी अधिक चांगली उपलब्धता असताना तात्पुरते हे नेटवर्क वापरा"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"कार्यालय सिम"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"अ‍ॅप आणि आशय प्रवेश"</string>
     <string name="user_rename" msgid="8735940847878484249">"नाव बदला"</string>
@@ -3452,6 +3457,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"तुमच्या विनंतीनुसार Android या अ‍ॅपच्या सूचना, या डिव्हाइसवर दिसणे ब्लॉक करत आहे"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"तुमच्या विनंतीनुसार Android, सूचनांच्या या वर्गवारीचे या डिव्हाइसवर दिसणे ब्लॉक करत आहे"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"तुमच्या विनंतीनुसार Android, सूचनांच्या या समूहाचे या डिव्हाइसवर दिसणे ब्लॉक करत आहे"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"हे अ‍ॅप सूचना पाठवत नाही"</string>
     <string name="notification_channels" msgid="1502969522886493799">"वर्गवाऱ्या"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"अन्य"</string>
     <string name="no_channels" msgid="4716199078612071915">"या ॲपने कोणत्याही सूचना पोस्ट केल्या नाहीत"</string>
@@ -3873,8 +3879,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"तुमच्या क्रेडिट पुरवठाद्वारे ब्लॉक केले"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"पालकाची संमती आवश्यक आहे"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"हे सेट करणे सुरू करण्यासाठी तुमच्या पालकाला फोन द्या"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"हे सेटिंग बदलण्याची अनुमती देण्यासाठी तुमच्या पालकाला फोन द्या."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"अधिक माहितीसाठी, तुमच्या आयटी ॲडमिनशी संपर्क साधा"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"अधिक तपशील"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"तुमचा प्रशासक सेटिंग्ज, परवानग्या, कॉर्पोरेट अ‍ॅक्सेस, नेटवर्क ॲक्टिव्हिटी आणि डीव्हाइसची स्थान माहिती यांसह तुमच्या कार्य प्रोफाइलशी संबधित ॲप्सचे आणि डेटाचे परीक्षण व व्यवस्थापन करू शकतो."</string>
@@ -4671,10 +4676,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"बदला"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"कनेक्ट केले आहे"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"तात्पुरते कनेक्ट केलेले"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"<xliff:g id="SUBNAME">%1$s</xliff:g> तात्पुरता वापरत आहे"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"कोणतेही कनेक्शन नाही"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"मोबाइल डेटा ऑटो-कनेक्ट होणार नाही"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"मोबाइल डेटा बंद करायचा आहे का?"</string>
@@ -4759,7 +4762,8 @@
     <string name="tare_balances" msgid="731881382594747961">"शिलकी"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"वापराच्या मर्यादा"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"सुरुवातीच्या वापराची मर्यादा"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"वापराची कमाल मर्यादा"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"वापरण्याची किमान मर्यादा"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"वापराची कमाल मर्यादा"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"मॉडिफायर"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"कृती (उत्पादनाचे शुल्क)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"कृती (मूळ किंमत)"</string>
