--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -357,6 +357,7 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Model wajah anda akan dipadamkan secara kekal dan selamat.\n\nSelepas pemadaman, anda akan memerlukan PIN, corak atau kata laluan untuk membuka kunci telefon anda."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Gunakan Buka Kunci Wajah untuk membuka kunci telefon anda"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Cap jari"</string>
+    <string name="security_settings_fingerprint_settings_preferences_category" msgid="8975029409126780752">"Apabila menggunakan Buka Kunci Cap Jari"</string>
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Cap jari untuk kerja"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Tambahkan cap jari"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +483,9 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Sekarang, anda boleh menggunakan cap jari anda untuk membuka kunci tablet anda atau mengesahkan identiti anda, seperti ketika anda log masuk ke apl"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Sekarang, anda boleh menggunakan cap jari anda untuk membuka kunci peranti anda atau mengesahkan identiti anda, seperti ketika anda log masuk ke apl"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Sekarang, anda boleh menggunakan cap jari anda untuk membuka kunci telefon anda atau mengesahkan identiti anda, seperti ketika anda log masuk ke apl"</string>
+    <string name="security_settings_require_screen_on_to_auth_title" msgid="6393244827110756927">"Hanya buka kunci apabila skrin dihidupkan"</string>
+    <string name="security_settings_require_screen_on_to_auth_description" msgid="8555651197315796037">"Skrin perlu dihidupkan sebelum anda boleh membuka kunci dengan cap jari anda. Tindakan ini dapat mengurangkan kemungkinan kunci terbuka secara tidak sengaja."</string>
+    <string name="security_settings_require_screen_on_to_auth_keywords" msgid="5557869560397089603">"Skrin, Buka Kunci"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Lakukan kemudian"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Angkat jari, kemudian sentuh lagi"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Letakkan bahagian tepi cap jari anda pada penderia dan tahan, kemudian alih ke bahagian yang lain"</string>
@@ -789,8 +793,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Tingkatkan tahap pengelogan tindanan NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Log nyahpepijat vendor berjela NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Menyertakan log vendor khusus peranti tambahan dalam laporan pepijat yang mungkin mengandungi maklumat peribadi."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"Log NFC NCI yang tidak ditapis"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Menangkap butiran paket NFC yang mungkin mengandungi maklumat peribadi."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Mulakan Semula Peranti?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Pengelogan butiran NFC adalah khusus untuk tujuan pembangunan sahaja. Data tambahan NFC disertakan dalam laporan pepijat yang mungkin mengandungi maklumat peribadi. Mulakan semula peranti anda untuk menukar tetapan ini."</string>
@@ -1177,6 +1180,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Tidak tersedia kerana mod waktu tidur dihidupkan"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Gunakan penyelamat skrin"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Semasa dicas atau didok"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"Semasa didok dan dicas"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Semasa mengecas"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Semasa didok"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Jangan sekali-kali"</string>
@@ -1465,8 +1469,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Kongsi sambungan Internet telefon melalui Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Penambatan Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Kongsi sambungan Internet telefon melalui Ethernet"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Kongsi sambungan Internet tablet melalui Ethernet"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Gunakan tempat liputan dan penambatan untuk menyediakan Internet kepada peranti lain melalui sambungan data mudah alih anda. Apl juga boleh membuat tempat liputan untuk berkongsi kandungan dengan peranti berdekatan."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Gunakan tempat liputan dan penambatan untuk menyediakan Internet kepada peranti lain melalui Wi-Fi atau sambungan data mudah alih anda. Apl juga boleh membuat tempat liputan untuk berkongsi kandungan dengan peranti berdekatan."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Bantuan"</string>
@@ -2937,10 +2940,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (disyorkan)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mesej MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Hantar &amp; terima apabila data mudah alih dimatikan"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Tukar data mudah alih secara automatik"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Gunakan rangkaian ini buat sementara waktu apabila rangkaian ini mempunyai ketersediaan yang lebih baik untuk panggilan dan Internet"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"SIM kerja"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Akses apl &amp; kandungan"</string>
     <string name="user_rename" msgid="8735940847878484249">"NAMAKAN SEMULA"</string>
@@ -3452,6 +3453,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Atas permintaan anda, Android menyekat pemberitahuan apl ini daripada muncul pada peranti ini"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Atas permintaan anda, Android menyekat kategori pemberitahuan ini daripada muncul pada peranti ini"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Atas permintaan anda, Android menyekat kumpulan pemberitahuan ini daripada muncul pada peranti ini"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"Apl ini tidak menghantar pemberitahuan"</string>
     <string name="notification_channels" msgid="1502969522886493799">"Kategori"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Lain-lain"</string>
     <string name="no_channels" msgid="4716199078612071915">"Apl ini belum menyiarkan sebarang pemberitahuan"</string>
@@ -3873,8 +3875,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Disekat oleh penyedia kredit anda"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ibu bapa diperlukan"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Serahkan telefon kepada ibu bapa anda untuk mula menyediakan pengesahan ini"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Serahkan telefon kepada ibu bapa anda untuk membenarkan tetapan ini ditukar."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Untuk mendapatkan maklumat lanjut, hubungi pentadbir IT anda"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Lagi butiran"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Pentadbir anda boleh memantau dan mengurus apl serta data yang berkaitan dengan profil kerja anda, termasuk tetapan, kebenaran, akses korporat, aktiviti rangkaian dan maklumat lokasi peranti."</string>
@@ -4671,10 +4672,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Tukar"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Disambungkan"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Disambungkan buat sementara waktu"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"Menggunakan <xliff:g id="SUBNAME">%1$s</xliff:g> buat sementara waktu"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Tiada sambungan"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Data mudah alih tidak akan autosambung"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Matikan data mudah alih?"</string>
@@ -4759,7 +4758,8 @@
     <string name="tare_balances" msgid="731881382594747961">"Baki"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Had Penggunaan"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Had Penggunaan Awal"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Had Penggunaan Maksimum"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Had Penggunaan Minimum"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Had Penggunaan Maksimum"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"Pengubah suai"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Tindakan (Kos Penghasilan)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Tindakan (Harga Asas)"</string>
