--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"သင်၏မျက်နှာနမူနာကို လုံခြုံစွာ အပြီးဖျက်လိုက်ပါမည်။\n\nဖျက်ပြီးသည့်အခါ သင်၏ဖုန်းကိုဖွင့်ရန် လက်ဗွေ၊ ပင်နံပါတ်၊ ပုံစံ (သို့) စကားဝှက် လိုအပ်ပါမည်။"</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"သင့်ဖုန်းကို လော့ခ်ဖွင့်ရန် မျက်နှာပြ လော့ခ်ဖွင့်ခြင်း အသုံးပြုပါ"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"လက်ဗွေ"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"အလုပ်ပရိုဖိုင် လက်ဗွေ"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"လက်ဗွေထည့်ရန်"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"အက်ပ်များသို့ လက်မှတ်ထိုးဝင်သောအခါကဲ့သို့ သင်ဖြစ်ကြောင်း အတည်ပြုရန်အတွက် (သို့) သင့်တက်ဘလက်ကို လော့ခ်ဖွင့်ရန်အတွက် သင့်လက်ဗွေကို ယခု သုံးနိုင်သည်"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"အက်ပ်များသို့ လက်မှတ်ထိုးဝင်သောအခါကဲ့သို့ သင်ဖြစ်ကြောင်း အတည်ပြုရန်အတွက် (သို့) သင့်စက်ကို လော့ခ်ဖွင့်ရန်အတွက် သင့်လက်ဗွေကို ယခု သုံးနိုင်သည်"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"အက်ပ်များသို့ လက်မှတ်ထိုးဝင်သောအခါကဲ့သို့ သင်ဖြစ်ကြောင်း အတည်ပြုရန်အတွက် (သို့) သင့်ဖုန်းကို လော့ခ်ဖွင့်ရန်အတွက် သင့်လက်ဗွေကို ယခု သုံးနိုင်သည်"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"နောက်မှလုပ်ရန်"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"ဖယ်ပြီး ပြန်ထိပါ"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"အာရုံခံကိရိယာပေါ်တွင် သင့်လက်ဗွေ၏ဘေးခြမ်းကို တင်ပြီးဖိထားပါ။ ထို့နောက် အခြားတစ်ဘက်သို့ ပြောင်းပါ"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC ဖွဲ့စည်းပုံ မှတ်တမ်း အဆင့်ကို တိုးရန်"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC အကျယ်ရှင်းလင်းချက်ပံ့ပိုးသူ အမှားရှာပြင်ခြင်း မှတ်တမ်း"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"ချွတ်ယွင်းမှု အစီရင်ခံချက်များတွင် စက်ပစ္စည်းအလိုက် ထုတ်လုပ်သူမှတ်တမ်းများကို ထည့်သွင်းခြင်းဖြင့် ကိုယ်ရေးကိုယ်တာ အချက်အလက်များ ပါဝင်နိုင်သည်။"</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC NCI စစ်ထုတ်မထားသော မှတ်တမ်း"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"သီးသန့်အချက်အလက် ပါဝင်နိုင်သော အသေးစိတ် NFC ဒေတာများကို ရယူသည်။"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"စက်ကို ပြန်စမလား။"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"အသေးစိတ် NFC မှတ်တမ်းတင်ခြင်းကို ဆော့ဖ်ဝဲရေးရန်အတွက်သာ ရည်ရွယ်ထားသည်။ သီးသန့်အချက်အလက်များ ပါရှိနိုင်သော ချွတ်ယွင်းမှု အစီရင်ခံချက်များတွင် ထပ်ဆောင်း NFC ဒေတာ ပါဝင်သည်။ ဤဆက်တင်ပြောင်းရန် သင့်စက်ကို ပြန်စပါ။"</string>
@@ -1177,6 +1184,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"အိပ်ချိန်မုဒ်ကို ဖွင့်ထားသောကြောင့် မရရှိနိုင်ပါ"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"ဖန်သားပြင်ချွေတာစနစ် သုံးခြင်း"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"အားသွင်းနေစဉ် သို့မဟုတ် တပ်ဆင်ထားစဉ်"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"တပ်ဆင်ပြီး အားသွင်းနေစဉ်"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"အားသွင်းနေစဉ်"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"အထိုင်တွင်တပ်ထားစဉ်"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"ဘယ်တော့မှ"</string>
@@ -1465,8 +1473,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"ဖုန်း၏ အင်တာနက်ကို ဘလူးတုသ်မှတစ်ဆင့် မျှဝေရန်"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"အီသာနက် ချိတ်၍မျှဝေခြင်း"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"ဖုန်း၏ အင်တာနက်ကို အီသာနက်မှတစ်ဆင့် မျှဝေရန်"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"တက်ဘလက်၏ အင်တာနက်ချိတ်ဆက်မှုကို အီသာနက်မှတစ်ဆင့် မျှဝေရန်"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"သင်၏ Wi-Fi သို့မဟုတ် မိုဘိုင်းဒေတာ ချိတ်ဆက်မှုမှတစ်ဆင့် အခြားစက်ပစ္စည်းများသို့ အင်တာနက်လွှင့်ရန် ဟော့စပေါ့နှင့် မိုဘိုင်းသုံးတွဲချိတ်ခြင်းကို သုံးပါ။ အနီးရှိစက်ပစ္စည်းများသို့ အကြောင်းအရာ မျှဝေရန်အတွက် အက်ပ်များသည်လည်း ဟော့စပေါ့ပြုလုပ်နိုင်သည်။"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"သင်၏ Wi-Fi သို့မဟုတ် မိုဘိုင်းဒေတာ ချိတ်ဆက်မှုမှတစ်ဆင့် အခြားစက်ပစ္စည်းများသို့ အင်တာနက်လွှင့်ရန် ဟော့စပေါ့နှင့် မိုဘိုင်းသုံးတွဲချိတ်ခြင်းကို သုံးပါ။ အနီးရှိစက်ပစ္စည်းများသို့ အကြောင်းအရာ မျှဝေရန်အတွက် အက်ပ်များသည်လည်း ဟော့စပေါ့ပြုလုပ်နိုင်သည်။"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"အကူအညီ"</string>
@@ -2937,10 +2944,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (အကြံပြုထား)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS မက်ဆေ့ဂျ်များ"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"မိုဘိုင်းဒေတာ ပိတ်ထားချိန်တွင် ပို့ရန်နှင့် လက်ခံရန်"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"မိုဘိုင်းဒေတာ အလိုအလျောက်ပြောင်းရန်"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"ခေါ်ဆိုမှုနှင့် အက်တာနက်အတွက် ပိုကောင်းမွန်သောအခါတွင် ဤကွန်ရက်ကို ယာယီသုံးနိုင်သည်"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"အလုပ် ဆင်းမ်"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"အက်ပ်&amp; အကြောင်းအရာ ရယူသုံးရန်"</string>
     <string name="user_rename" msgid="8735940847878484249">"အမည်ပြောင်းပါ"</string>
@@ -3452,6 +3457,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအက်ပ်၏ အကြောင်းကြားချက်များကို ဤစက်ပစ္စည်းပေါ်တွင် ပိတ်ထားပါသည်"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအကြောင်းကြားချက်အမျိုးအစားများ ဤစက်ပစ္စည်းပေါ်တွင် ပေါ်မလာအောင် ပိတ်ထားပါသည်"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"သင့်တောင်းဆိုချက်အရ Android သည် ဤအကြောင်းကြားချက်အုပ်စုများ ဤစက်ပစ္စည်းပေါ်တွင် ပေါ်မလာအောင် ပိတ်ထားပါသည်"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"ဤအက်ပ်က အကြောင်းကြားချက် မပို့ပါ"</string>
     <string name="notification_channels" msgid="1502969522886493799">"အမျိုးအစားများ"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"အခြား"</string>
     <string name="no_channels" msgid="4716199078612071915">"ဤအက်ပ်က မည်သည့် အကြောင်းကြားချက်ကိုမျှ ပို့စ်တင်မထားပါ"</string>
@@ -3873,8 +3879,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"သင်၏ ခရက်ဒစ်ဝန်ဆောင်မှုပေးသူက ပိတ်ထားသည်"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"မိဘ လိုအပ်သည်"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"၎င်းကို စတင်ထည့်သွင်းရန် သင့်မိဘအား ဖုန်းပေးလိုက်ပါ"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"ဤဆက်တင် ပြောင်းလဲခွင့်ပြုရန် သင့်မိဘထံသို့ ဖုန်းပေးလိုက်ပါ။"</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"ပိုမိုသိရှိလိုပါက IT စီမံခန့်ခွဲသူထံ ဆက်သွယ်ပါ"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"နောက်ထပ် အသေးစိတ်များ"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"သင်၏စီမံခန့်ခွဲသူသည် ဆက်တင်များ၊ ခွင့်ပြုချက်များ၊ ပူးပေါင်းသုံးစွဲခွင့်များ၊ ကွန်ရက်လုပ်ဆောင်ချက်နှင့် စက်ပစ္စည်း၏ တည်နေရာ အချက်အလက်များအပါအဝင် သင်၏ အလုပ်ပရိုဖိုင်နှင့် ဆက်စပ်နေသည့် အက်ပ်နှင့် ဒေတာများကို စောင့်ကြည့်စီမံနိုင်ပါသည်။"</string>
@@ -4671,10 +4676,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"ပြောင်းရန်"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"ချိတ်ဆက်ထားသည်"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"ယာယီချိတ်ဆက်ထားသည်"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"<xliff:g id="SUBNAME">%1$s</xliff:g> ကို ယာယီသုံးနေသည်"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"ချိတ်ဆက်မှုမရှိပါ"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"မိုဘိုင်းဒေတာက အလိုအလျောက် ချိတ်ဆက်မည်မဟုတ်ပါ"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"မိုဘိုင်းဒေတာ ပိတ်မလား။"</string>
@@ -4759,7 +4762,8 @@
     <string name="tare_balances" msgid="731881382594747961">"လက်ကျန်ငွေများ"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"သုံးစွဲမှု ကန့်သတ်ချက်များ"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"အစပိုင်းသုံးစွဲမှု ကန့်သတ်ချက်"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"အများဆုံးသုံးစွဲမှု ကန့်သတ်ချက်"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"အနည်းဆုံးသုံးစွဲမှု ကန့်သတ်ချက်"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"အများဆုံးသုံးစွဲမှု ကန့်သတ်ချက်"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"မွမ်းမံပစ္စည်းများ"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"လုပ်ဆောင်ချက်များ (ထုတ်လုပ်စရိတ်)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"လုပ်ဆောင်ချက်များ (အခြေခံဈေးနှုန်း)"</string>
