--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Je gezichtsmodel wordt definitief en op een beveiligde manier verwijderd.\n\nDaarna heb je je pincode, patroon of wachtwoord nodig om je telefoon te ontgrendelen."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Ontgrendel je telefoon via gezichtsherkenning"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Vingerafdruk"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Vingerafdruk voor werk"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Vingerafdruk toevoegen"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Je kunt nu je vingerafdruk gebruiken om je tablet te ontgrendelen of voor verificatie, bijvoorbeeld als je inlogt bij apps"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Je kunt nu je vingerafdruk gebruiken om je apparaat te ontgrendelen of voor verificatie, bijvoorbeeld als je inlogt bij apps"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Je kunt nu je vingerafdruk gebruiken om je telefoon te ontgrendelen of voor verificatie, bijvoorbeeld als je inlogt bij apps"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Later doen"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Raak de sensor opnieuw aan"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Leg de zijkant van je vingerafdruk op de sensor en houd vast. Doe dan hetzelfde aan de andere kant."</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Verhoog registratieniveau voor NFC-stack"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Uitgebreid NFC-leverancierslogboek voor foutopsporing"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Neem aanvullende apparaatspecifieke leverancierslogboeken op in bugrapporten. Deze kunnen privé-informatie bevatten."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"Niet-gefilterd NFC NCI-logbestand"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Gedetailleerde NFC-pakketten vastleggen, die privé-informatie kunnen bevatten."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Apparaat opnieuw opstarten?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Gedetailleerde NFC-logboekregistratie is alleen voor ontwikkelingsdoeleinden bedoeld. Aanvullende NFC-gegevens worden opgenomen in bugrapporten. Deze kunnen privé-informatie bevatten. Start je apparaat opnieuw om deze instelling te wijzigen."</string>
@@ -1177,6 +1184,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Niet beschikbaar omdat de bedtijdstand aanstaat"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Screensaver gebruiken"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Tijdens opladen of docken"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"Tijdens gedockt opladen"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Tijdens het opladen"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Tijdens het docken"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Nooit"</string>
@@ -1465,8 +1473,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Deel internetverbinding van telefoon via bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-tethering"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Deel internetverbinding van telefoon via ethernet"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Internetverbinding van deze tablet delen via ethernet"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Gebruik hotspot en tethering om internet aan andere apparaten te leveren via je mobiele dataverbinding. Apps kunnen ook hotspots maken om content te delen met apparaten in de buurt."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Gebruik hotspot en tethering om internet aan andere apparaten te leveren via je wifi- of mobiele dataverbinding. Apps kunnen ook hotspots maken om content te delen met apparaten in de buurt."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Hulp"</string>
@@ -2937,10 +2944,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (aanbevolen)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mms-berichten"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Sturen en ontvangen als mobiele data uitstaan"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Automatisch mobiele data wisselen"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Dit netwerk tijdelijk gebruiken als het betere beschikbaarheid heeft voor gesprekken en internet"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Simkaart voor werk"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Toegang tot apps en content"</string>
     <string name="user_rename" msgid="8735940847878484249">"NAAM WIJZIGEN"</string>
@@ -3452,6 +3457,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Op jouw verzoek toont Android geen meldingen van deze app op dit apparaat"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Op jouw verzoek toont Android geen meldingen van deze categorie op dit apparaat"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Op jouw verzoek toont Android deze groep meldingen niet op dit apparaat"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"Deze app stuurt geen meldingen"</string>
     <string name="notification_channels" msgid="1502969522886493799">"Categorieën"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Anders"</string>
     <string name="no_channels" msgid="4716199078612071915">"Deze app heeft geen meldingen geplaatst"</string>
@@ -3873,8 +3879,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Geblokkeerd door je kredietverstrekker"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ouder nodig"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Geef de telefoon aan je ouder om dit in te stellen"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Geef de telefoon aan je ouder zodat die deze instelling kan wijzigen."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Neem voor meer informatie contact op met je IT-beheerder"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Meer informatie"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Je beheerder kan apps en gegevens bijhouden en beheren die aan je werkprofiel zijn gekoppeld (waaronder instellingen, rechten, zakelijke toegang, netwerkactiviteit en locatiegegevens van het apparaat)."</string>
@@ -4671,10 +4676,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Wijzigen"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>: <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Verbonden"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Tijdelijk verbonden"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"<xliff:g id="SUBNAME">%1$s</xliff:g> wordt tijdelijk gebruikt"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Geen verbinding"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobiele data maakt niet automatisch verbinding"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Mobiele data uitzetten?"</string>
@@ -4759,7 +4762,8 @@
     <string name="tare_balances" msgid="731881382594747961">"Saldo\'s"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Verbruikslimieten"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Initiële verbruikslimiet"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Maximale verbruikslimiet"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Minimale verbruikslimiet"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Maximale verbruikslimiet"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"Modifiers"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Acties (productiekosten)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Acties (basisprijs)"</string>
