--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -360,6 +360,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Modelul facial se va șterge definitiv și în siguranță.\n\nDupă ștergere, vei avea nevoie de codul PIN, de model sau de parolă ca să îți deblochezi telefonul."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Folosește Deblocarea facială ca să-ți deblochezi telefonul"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Amprentă"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Amprentă pentru lucru"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Adaugă o amprentă"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -492,6 +494,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Acum vă puteți folosi amprenta pentru a vă debloca tableta sau pentru a vă confirma identitatea, de exemplu, când vă conectați la aplicații"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Acum vă puteți folosi amprenta pentru a vă debloca dispozitivul sau pentru a vă confirma identitatea, de exemplu, când vă conectați la aplicații"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Acum vă puteți folosi amprenta pentru a vă debloca telefonul sau pentru a vă confirma identitatea, de exemplu, când vă conectați la aplicații"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Mai târziu"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Ridică, apoi atinge din nou"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Așează partea laterală a degetului pe senzor și menține, apoi procedează la fel cu cealaltă parte"</string>
@@ -812,8 +820,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Mărește nivelul de înregistrare pentru stiva NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Jurnal de remediere erori pentru furnizorii detaliați NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Include alte jurnale ale furnizorilor de dispozitive în rapoartele de eroare, care pot conține informații private."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"Jurnal nefiltrat NCI NFC"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Capturează pachetele NFC cu detalii, care pot conține informații private."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Repornești dispozitivul?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Înregistrarea NFC detaliată este menită exclusiv pentru dezvoltare Datele NFC suplimentare sunt incluse în rapoartele de eroare, care pot conține informații private. Repornește dispozitivul ca să schimbi setarea."</string>
@@ -1203,6 +1210,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Indisponibil; modul ora de culcare este activat"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Folosește screensaverul"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"În timpul încărcării sau andocării"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"Când este andocat și încarcă"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"În timpul încărcării"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Când dispozitivul este andocat"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Niciodată"</string>
@@ -1492,8 +1500,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Permite acces prin Bluetooth la conexiunea de internet a telefonului"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Tethering Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Permite accesul la conexiunea de internet a telefonului prin Ethernet"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Permite accesul la conexiunea la internet a tabletei prin Ethernet"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Folosește hotspotul și tetheringul pentru a oferi o conexiune de internet altor dispozitive prin conexiunea ta de date mobile. Și aplicațiile pot crea un hotspot pentru a trimite conținut dispozitivelor din apropiere."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Folosește hotspotul și tetheringul pentru a oferi o conexiune de internet altor dispozitive prin conexiunea ta Wi-Fi sau de date mobile. Aplicațiile pot crea și un hotspot pentru a trimite conținut dispozitivelor din apropiere."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Ajutor"</string>
@@ -2984,10 +2991,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (recomandat)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mesaje MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Trimite și primește când datele mobile sunt dezactivate"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Comută automat la date mobile"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Folosește temporar această rețea când are o disponibilitate mai mare pentru apeluri și internet"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Card SIM pentru serviciu"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Acces la aplicație și la conținut"</string>
     <string name="user_rename" msgid="8735940847878484249">"REDENUMIȚI"</string>
@@ -3503,6 +3508,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"La solicitarea ta, Android blochează notificările acestei aplicații pe dispozitiv"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"La solicitarea ta, Android blochează această categorie de notificări pe dispozitiv"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"La solicitarea ta, Android blochează acest grup de notificări pe dispozitiv"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"Aplicația nu trimite notificări"</string>
     <string name="notification_channels" msgid="1502969522886493799">"Categorii"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Altele"</string>
     <string name="no_channels" msgid="4716199078612071915">"Această aplicație nu a postat nicio notificare"</string>
@@ -3935,8 +3941,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Blocată de creditor"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Acord parental necesar"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Dă telefonul părinților ca să înceapă configurarea"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Dă telefonul părinților ca să permită modificarea acestei setări."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Pentru mai multe informații, contactează administratorul IT"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Mai multe detalii"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administratorul poate să monitorizeze și să gestioneze aplicațiile și datele asociate profilului de serviciu, inclusiv setările, permisiunile, accesul la nivelul companiei, activitatea în rețea și informațiile despre locația dispozitivului."</string>
@@ -4745,10 +4750,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Modificați"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Conectat"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Conectat temporar"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"Folosește temporar <xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Nicio conexiune"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Datele mobile nu se conectează automat"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Dezactivezi datele mobile?"</string>
@@ -4833,7 +4836,8 @@
     <string name="tare_balances" msgid="731881382594747961">"Solduri"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Limite de consum"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Limita inițială de consum"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Limita maximă de consum"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Limita minimă de consum"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Limita maximă de consum"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"Modificatori"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Acțiuni (costul producției)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Acțiuni (preț de bază)"</string>
