--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Muundo wa uso wako utafutwa kabisa kwa njia salama.\n\nBaada ya kufuta, utahitaji PIN, mchoro au nenosiri lako ili ufungue simu yako."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Tumia kipengele cha Kufungua kwa uso ili ufungue simu yako"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Alama ya kidole"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Alama ya kidole kwenye wasifu wa kazini"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Ongeza alama nyingine ya kidole"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Sasa unaweza kutumia alama ya kidole chako kufungua kompyuta kibao yako au kuthibitisha kuwa ni wewe, kama vile unapoingia katika akaunti kwenye programu"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Sasa unaweza kutumia alama ya kidole chako kufungua kifaa chako au kuthibitisha kuwa ni wewe, kama vile unapoingia katika akaunti kwenye programu"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Sasa unaweza kutumia alama ya kidole chako kufungua simu yako au kuthibitisha kuwa ni wewe, kama vile unapoingia katika akaunti kwenye programu"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Ongeza baadaye"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Inua, kisha uguse tena"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Weka upande mmoja wa kidole chako kwenye kitambuzi na ushikilie, kisha uweke upande wa pili"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Ongeza kiwango cha kuweka kumbukumbu ya rafu za NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Kumbukumbu ya kina ya utatuzi ya mtoa huduma"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Jumuisha kumbukumbu za ziada za mtoa huduma mahususi kwa kifaa katika ripoti za hitilafu ambazo huenda zikawa na taarifa ya faragha."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"Kumbukumbu isiyochujwa ya NFC NCI"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Nasa vifurushi vya maelezo vya NFC ambavyo huenda vikawa na taarifa ya faragha."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Ungependa kuzima kisha uwashe kifaa?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Uwekaji maelezo ya kumbukumbu ya NFC ni kwa madhumuni ya usanidi pekee. Vilevile data ya NFC inajumuishwa katika ripoti za hitilafu ambazo huenda zikawa na taarifa ya faragha. Zima kisha uwashe kifaa chako ili ubadili mipangilio hii."</string>
@@ -1177,6 +1184,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Haipatikani kwa sababu umewasha hali ya wakati umelala"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Tumia taswira ya skrini"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Wakati imeunganishwa na kifaa kingine au inapochaji"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Inapochaji"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Wakati imeunganishwa na kifaa kingine"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Isiwahi"</string>
@@ -1465,8 +1474,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Shiriki muunganisho wa intaneti ya simu kupitia Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Sambaza mtandao kwa Ethaneti"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Shiriki muunganisho wa intaneti ya simu kupitia Ethaneti"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Shiriki muunganisho wa intaneti ya kompyuta kibao kupitia Ethaneti"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Tumia mtandao pepe na kipengele cha kusambaza mtandao ili ushiriki intaneti na vifaa vingine kupitia muunganisho wa data wa simu za mkononi. Programu pia zinaweza kuunda mtandao pepe ili kushiriki maudhui na vifaa vilivyo karibu."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Tumia mtandaopepe na huduma ya kusambaza mtandao ili uvisambazie vifaa vingine intaneti kupitia muunganisho wa data wa simu au Wi-Fi. Programu pia zinaweza kuunda mtandaopepe ili kushiriki maudhui na vifaa vilivyo karibu."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Usaidizi"</string>
@@ -2937,10 +2945,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (inapendekezwa)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Ujumbe wa MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Kutuma na kupokea wakati data ya mtandao wa simu imezimwa"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Badilisha data ya mtandao wa simu kiotomatiki"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Tumia mtandao huu kwa muda unapopatikana vizuri kwa ajili ya simu na intaneti"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"SIM ya Kazi"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Ufikiaji wa programu na maudhui"</string>
     <string name="user_rename" msgid="8735940847878484249">"BADILISHA JINA"</string>
@@ -3452,6 +3458,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Kutokana na ombi lako, Android inazuia arifa za programu hii ili zisionekane kwenye kifaa hiki"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Kutokana na ombi lako, Android inazuia aina hizi za arifa ili zisionekane kwenye kifaa hiki"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Kutokana na ombi lako, Android inazuia kikundi hiki cha arifa ili zisionekane kwenye kifaa hiki"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"Aina"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Nyingine"</string>
     <string name="no_channels" msgid="4716199078612071915">"Programu hii haijachapisha arifa zozote"</string>
@@ -3873,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Imezuiwa na kampuni iliyokuuzia kifaa kwa mkopo"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Mzazi anahitajika"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Mpe mzazi wako simu ili kuanza kuweka mipangilio hii"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Mpatie mzazi wako simu ili kuruhusu mipangilio hii kubadilishwa."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Ili upate maelezo zaidi, wasiliana na Msimamizi wako wa TEHAMA"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Maelezo zaidi"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Msimamizi wako anaweza kufuatilia na kudhibiti programu na data zinazohusiana na wasifu wako wa kazini, ikiwa ni pamoja na mipangilio, ruhusa, ufikiaji wa shirika, shughuli za mtandao na maelezo ya mahali kilipo kifaa."</string>
@@ -4671,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Badilisha"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Imeunganishwa"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Imeunganishwa kwa muda"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"Inatumia <xliff:g id="SUBNAME">%1$s</xliff:g> kwa muda"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Hakuna muunganisho"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Data ya simu haitaunganishwa kiotomatiki"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Ungependa kuzima data ya mtandao wa simu?"</string>
@@ -4759,7 +4764,10 @@
     <string name="tare_balances" msgid="731881382594747961">"Salio"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Kikomo cha Matumizi"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Kikomo cha Matumizi ya Mwanzo"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Kikomo cha Juu zaidi cha Matumizi"</string>
+    <!-- no translation found for tare_min_consumption_limit (3293145670921755789) -->
+    <skip />
+    <!-- no translation found for tare_max_consumption_limit (8335700580111808823) -->
+    <skip />
     <string name="tare_modifiers" msgid="8919975635360280820">"Virekebishi"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Vitendo (Gharama ya Kuzalisha Bidhaa)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Vitendo (Bei ya Msingi)"</string>
