--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Permanente at secure na ide-delete ang iyong face model.\n\nPagkatapos ng pag-delete, kakailanganin mo ang iyong PIN, pattern, o password para i-unlock ang telepono mo."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Gamitin ang Pag-unlock Gamit ang Mukha para i-unlock ang iyong telepono"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Fingerprint"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Fingerprint sa trabaho"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Magdagdag ng fingerprint"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -482,6 +484,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Ngayon, magagamit mo na ang iyong fingerprint para i-unlock ang tablet mo o i-verify na ikaw ito, halimbawa, kapag nagsa-sign in ka sa mga app"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Ngayon, magagamit mo na ang iyong fingerprint para i-unlock ang device mo o i-verify na ikaw ito, halimbawa, kapag nagsa-sign in ka sa mga app"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Ngayon, magagamit mo na ang iyong fingerprint para i-unlock ang telepono mo o i-verify na ikaw ito, halimbawa, kapag nagsa-sign in ka sa mga app"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Gawin ito sa ibang pagkakataon"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Iangat, pagkatpaos ay pindutin ulit"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Ilagay ang gilid ng iyong fingerprint sa sensor nang matagal, pagkatapos ay ang kabilang gilid"</string>
@@ -789,8 +797,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Pataasin ang antas ng pag-log ng stack ng NFC"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"Log ng pag-debug ng verbose vendor ng NFC"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Isama ang mga karagdagang log ng vendor na partikular sa device sa mga ulat ng bug, na posibleng may pribadong impormasyon."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"Log ng walang filter ng NFC NCI"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"I-capture ang mga packet ng detalye ng NFC, na posibleng may pribdong impormasyon."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"I-restart ang Device?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Idinisenyo lang ang pag-log ng detalye ng NFC para sa pag-develop. Nagsasama ng karagdagang data ng NFC sa mga ulat ng bug, na posibleng may pribadong impormasyon. I-restart ang iyong device para baguhin ang setting na ito."</string>
@@ -1177,6 +1184,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Hindi available dahil naka-on ang bedtime mode"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Gumamit ng screen saver"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Habang nagcha-charge o naka-dock"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"Habang naka-dock at nagcha-charge"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Habang nagcha-charge"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Habang naka-dock"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Hindi kailanman"</string>
@@ -1465,8 +1473,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Ibahagi ang koneksyon sa internet ng phone sa pamamagitan ng Bluetooth"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Pag-tether ng Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Ibahagi ang koneksyon sa internet ng telepono gamit ang Ethernet"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Ibahagi ang koneksyon sa internet ng tablet sa pamamagitan ng Ethernet"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Gamitin ang hotspot at pag-tether upang makapagbigay ng internet sa iba pang device sa pamamagitan ng iyong koneksyon ng mobile data. Maaari ding gumawa ang mga app ng hotspot upang magbahagi ng content sa mga kalapit na device."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Gamitin ang hotspot at pag-tether para magbigay ng internet sa iba pang device sa pamamagitan ng iyong koneksyon sa Wi‑Fi o mobile data. Puwede ring gumawa ng hotspot ang mga app para magbahagi ng content sa mga kalapit na device."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Tulong"</string>
@@ -2937,10 +2944,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (inirerekomenda)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"Mga mensaheng MMS"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Magpadala at tumanggap kapag naka-off ang mobile data"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Awtomatikong baguhin ang mobile data"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Pansamantalang gamitin ang network na ito kapag mas mahusay ang availability nito para sa mga tawag at internet"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"SIM sa Trabaho"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Access sa app at content"</string>
     <string name="user_rename" msgid="8735940847878484249">"I-RENAME"</string>
@@ -3452,6 +3457,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Bilang tugon sa iyong kahilingan, pinipigilan ng Android na lumabas sa device na ito ang mga notification ng app na ito"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Bilang tugon sa iyong kahilingan, pinipigilan ng Android na lumabas sa device na ito ang ganitong kategorya ng mga notification"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Bilang tugon sa iyong kahilingan, pinipigilan ng Android na lumabas sa device na ito ang ganitong grupo ng mga notification"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"Hindi nagpapadala ang app na ito ng mga notification"</string>
     <string name="notification_channels" msgid="1502969522886493799">"Mga Kategorya"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Iba Pa"</string>
     <string name="no_channels" msgid="4716199078612071915">"Walang anumang notification para sa app na ito"</string>
@@ -4670,10 +4676,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Baguhin"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Nakakonekta"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Pansamantalang nakakonekta"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"Pansamantalang ginagamit ang <xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Walang koneksyon"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Hindi awtomatikong kokonekta ang mobile data"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"I-off ang mobile data?"</string>
@@ -4758,7 +4762,8 @@
     <string name="tare_balances" msgid="731881382594747961">"Mga Balanse"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Mga Limitasyon sa Pagkonsumo"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Paunang Limitasyon sa Pagkonsumo"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Maximum na Limitasyon sa Pagkonsumo"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Minimum na Limitasyon sa Pagkonsumo"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Maximum na Limitasyon sa Pagkonsumo"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"Mga Modifier"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Mga Pagkilos (Halaga ng Paggawa)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Mga Pagkilos (Batayang Presyo)"</string>
