--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -357,6 +357,7 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"Yuz modelingiz butunlay va xavfsiz oʻchirib tashlandi.\n\nOʻchirib tashlangandan keyin telefoningiz qulfini ochish uchun PIN kod, grafik kalit yoki parol kiritishingiz lozim."</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"Telefon qulfini yuz bilan oching"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"Barmoq izi"</string>
+    <string name="security_settings_fingerprint_settings_preferences_category" msgid="8975029409126780752">"Barmoq izi bilan ochishdan foydalanilganda"</string>
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"Ish uchun barmoq izi"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"Barmoq izi qo‘shish"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -488,6 +489,9 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"Endi planshetni qulfdan chiqarish yoki ilovaga kirish kabi hisob tekshiruvida barmoq izingizdan foydalanishingiz mumkin"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"Endi qurilmani qulfdan chiqarish yoki ilovaga kirish kabi hisob tekshiruvida barmoq izingizdan foydalanishingiz mumkin"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"Endi telefonni qulfdan chiqarish yoki ilovaga kirish kabi hisob tekshiruvida barmoq izingizdan foydalanishingiz mumkin"</string>
+    <string name="security_settings_require_screen_on_to_auth_title" msgid="6393244827110756927">"Faqat ekran yoniqligida qulfdan chiqarilsin"</string>
+    <string name="security_settings_require_screen_on_to_auth_description" msgid="8555651197315796037">"Barmoq izingiz bilan ocha olishingiz mumkin oldin ekran yoniq boʻlishi kerak. Bu tasodifiy qulfni ochish ehtimolini kamaytiradi."</string>
+    <string name="security_settings_require_screen_on_to_auth_keywords" msgid="5557869560397089603">"Ekran, qulfdan chiqarish"</string>
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"Keyinroq bajarish"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"Bir necha marta tekkizing"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"Barmoq izingizning yonlarini sensorga joylashtiring va tutib turing, keyin boshqa yonga almashtiring"</string>
@@ -795,8 +799,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Nfc steklarini jurnalga yozish darajasini oshirish"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC taʼminotchisining batafsil debag jurnali"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"Xatoliklar hisobotiga shaxsiy maʼlumotlari bor qurilmaga aloqador taʼminotchining qoʻshimcha yozuvlari kiradi."</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC NCI filtrlanmagan jurnali"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"Shaxsiy maʼlumotlar bor NFC paketlarining tafsilotlarini yozib olish."</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"Qurilma qayta ishga tushirilsinmi?"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"Tafsilotli NFC jurnali faqat ishlab chiqish maqsadlari uchun moʻljallangan. Qoʻshimcha NFC maʼlumotlari shaxsiy maʼlumotlar bor xato hisobotlariga kiritilgan. Bu sozlamani oʻzgartirish uchun qurilmangizni qayta ishga tushiring."</string>
@@ -1183,6 +1186,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Uyqu vaqti rejimi yoniqligi sababli ishlamaydi"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Ekran lavhasidan foydalanish"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Quvvat yoki dok-stansiya"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"Dokka ulanganda yoki quvvatlanganda"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Quvvat olayotganda"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"Dok-stansiyaga ulanganda"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"Hech qachon"</string>
@@ -1471,8 +1475,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"Telefondagi internetni Bluetooth orqali tarqatish"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet modem rejimi"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Telefondagi internetni Ethernet orqali tarqatish"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"Planshetdagi internetni Ethernet orqali tarqatish"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"Boshqa qurilmalarga mobil internetni tarqatish uchun hotspot va modem rejimidan foydalaning. Ilovalar ham yaqin-atrofdagi qurilmalarga kontent ulashish uchun hotspot yarata oladi."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Boshqa qurilmalarga Wi-Fi yoki mobil internet orqali internetni tarqatish uchun hotspot va modem rejimlaridan foydalaning. Ilovalar ham yaqin-atrofdagi qurilmalarga kontent ulashish uchun hotspot yarata oladi."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Yordam"</string>
@@ -2943,10 +2946,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (tavsiya etiladi)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS xabarlar"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"Mobil internet oʻchiqligida MMS xabarlaridan foydalanish"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"Mobil internetning avtomatik almashtirilishi"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"Internet va chaqiruvlar uchun yaxshiroq ishlaganda vaqtincha shu tarmoqdan foydalaning"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Ishchi SIM karta"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"Ilovalar va kontentga kirish"</string>
     <string name="user_rename" msgid="8735940847878484249">"QAYTA NOMLASH"</string>
@@ -3458,6 +3459,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Sozlamalaringizga binoan, Android ushbu ilova bildirishnomalarini ekranga chiqarmaydi"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Android bu turkumdagi bildirishnomalarni bloklamoqda"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Android bunday bildirishnomalar guruhini bloklaydi"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"Bu ilova bildirishnomalar yubormaydi"</string>
     <string name="notification_channels" msgid="1502969522886493799">"Turkumlar"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Boshqa"</string>
     <string name="no_channels" msgid="4716199078612071915">"Bu ilova hech qanday bildirishnoma joylamagan"</string>
@@ -3879,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Kredit idorangiz tomonidan bloklandi"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ota-ona zarur"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Buni sozlash uchun telefonni ota-onangizga bering"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"Bu sozlamani oʻzgartirishga ruxsat berish uchun telefonni ota-onangizga bering."</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"Batafsil axborot olish uchun administratoringizga murojaat qiling"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Qo‘shimcha tafsilotlar"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administratoringiz ishchi profilingiz bilan bog‘liq ilova va ma’lumotlarni, jumladan, sozlamalar, ruxsatnomalar, korporativ kirish huquqi, tarmoqdagi faollik va qurilmaning joylashuvi haqidagi ma’lumotlarni kuzatishi va boshqarishi mumkin."</string>
@@ -4677,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"Oʻzgarish"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Ulandi"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Vaqtincha ulangan"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"Vaqtincha ishlatilmoqda: <xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"Internetga ulanmagansiz"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"Mobil internet avtomatik ulanmaydi"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"Mobil internet uzilsinmi?"</string>
@@ -4765,7 +4764,8 @@
     <string name="tare_balances" msgid="731881382594747961">"Balanslar"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"Sarf cheklovlari"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"Boshlangʻich sarf cheklovi"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"Maksimal sarf cheklovi"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"Minimal sarf cheklovi"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"Maksimal sarf cheklovi"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"Modifikatorlar"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"Amallar (ishlab chiqarish narxi)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"Amallar (asosiy narxi)"</string>
