--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -357,6 +357,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"系統會妥善地將您的面部模型永久刪除。面部模型刪除後，您便需要使用\n\n面部模型刪除後，您便需要使用 PIN、圖案或密碼來解鎖手機。"</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"使用「面孔解鎖」解鎖手機"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"指紋"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"工作設定檔的指紋"</string>
     <string name="fingerprint_add_title" msgid="1837610443487902050">"新增指紋"</string>
     <plurals name="security_settings_fingerprint_preference_summary" formatted="false" msgid="6897454766137108776">
@@ -484,6 +486,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"現在可使用指紋解鎖平板電腦或驗證身分，例如用來登入應用程式"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"現在可使用指紋解鎖裝置或驗證身分，例如用來登入應用程式"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"現在可使用指紋解鎖手機或驗證身分，例如用來登入應用程式"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"稍後再做"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"移開手指，然後再次輕觸感應器"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"將指紋的一側放上感應器並按住，然後再換另一側"</string>
@@ -791,8 +799,7 @@
     <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"提高 NFC 堆疊記錄等級"</string>
     <string name="nfc_verbose_vendor_log_title" msgid="5554505631122964628">"NFC 詳細供應商偵錯記錄"</string>
     <string name="nfc_verbose_vendor_log_summary" msgid="3049128322855928507">"在錯誤報告中包括其他裝置專屬供應商記錄，其中可能包含私人資料。"</string>
-    <!-- no translation found for nfc_snoop_log_title (1576197495976952388) -->
-    <skip />
+    <string name="nfc_snoop_log_title" msgid="1576197495976952388">"NFC NCI 未篩選記錄"</string>
     <string name="nfc_snoop_log_summary" msgid="3988383328800163180">"擷取詳細 NFC 封包，其中可能包含私人資料。"</string>
     <string name="nfc_reboot_dialog_title" msgid="2033983438635768169">"要重新啟動裝置嗎？"</string>
     <string name="nfc_reboot_dialog_message" msgid="4929353168157966992">"詳細 NFC 記錄僅適用於開發用途。錯誤報告中包括有其他 NFC 資料，其中可能包含私人資料。重新啟動裝置即可變更此設定。"</string>
@@ -1179,6 +1186,7 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"睡眠模式開啟時無法使用"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"使用螢幕保護程式"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"充電或放上插座時"</string>
+    <string name="screensaver_settings_summary_dock_and_charging" msgid="8485905100159376156">"已插上座架並進行充電時"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"充電時"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"放上插座時"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"永不"</string>
@@ -1467,8 +1475,7 @@
     <string name="bluetooth_tethering_subtext" product="default" msgid="4322810060538179348">"透過藍牙分享手機的互聯網連線"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"以太網網絡共享"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"透過以太網分享手機的互聯網連線"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"透過以太網絡分享平板電腦的互聯網連線"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"使用熱點和網絡共享功能，透過您的流動數據連線提供互聯網服務給其他裝置。應用程式可以建立熱點，與附近的裝置分享內容。"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"使用熱點和網絡共享功能，讓其他裝置透過 Wi‑Fi 或流動數據連接到互聯網。應用程式亦可以建立熱點，與附近的裝置分享內容。"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"說明"</string>
@@ -2939,10 +2946,8 @@
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (建議)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS 訊息"</string>
     <string name="mms_message_summary" msgid="2855847140141698341">"停用流動數據時收發短訊"</string>
-    <!-- no translation found for auto_data_switch_title (5862200603753603464) -->
-    <skip />
-    <!-- no translation found for auto_data_switch_summary (135082667541071789) -->
-    <skip />
+    <string name="auto_data_switch_title" msgid="5862200603753603464">"自動切換流動數據"</string>
+    <string name="auto_data_switch_summary" msgid="135082667541071789">"暫時使用此網絡，因為其通話和互聯網效能較佳"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"啟用 SIM 卡"</string>
     <string name="user_restrictions_title" msgid="4068914244980335993">"應用程式和內容存取權"</string>
     <string name="user_rename" msgid="8735940847878484249">"重新命名"</string>
@@ -3454,6 +3459,7 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Android 目前按您的要求防止這個應用程式的通知在此裝置上顯示"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Android 目前按您的要求防止這類通知在此裝置上顯示"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Android 目前按您的要求防止這類通知在此裝置上顯示"</string>
+    <string name="app_notifications_not_send_desc" msgid="5683060986735070528">"這個應用程式不會傳送通知"</string>
     <string name="notification_channels" msgid="1502969522886493799">"類別"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"其他"</string>
     <string name="no_channels" msgid="4716199078612071915">"此應用程式未發佈任何通知"</string>
@@ -3875,8 +3881,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"已被您的信貸提供者封鎖"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"必須取得家長同意"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"必須將手機交給家長以開始進行這項設定"</string>
-    <!-- no translation found for disabled_by_policy_parental_consent (9166060049019018978) -->
-    <skip />
+    <string name="disabled_by_policy_parental_consent" msgid="9166060049019018978">"此設定必須經家長同意才能變更，因此請將手機交給家長。"</string>
     <string name="default_admin_support_msg" msgid="8816296554831532033">"如需瞭解詳情，請聯絡 IT 管理員"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"更多詳細資料"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"您的管理員可以監控及管理與工作設定檔相關的應用程式和資料，包括設定、權限、公司存取權、網絡活動，以及裝置的位置資料。"</string>
@@ -4673,10 +4678,8 @@
     <string name="wifi_scan_change" msgid="8438320311511852918">"變更"</string>
     <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"已連線"</string>
-    <!-- no translation found for mobile_data_temp_connection_active (3430470299756236413) -->
-    <skip />
-    <!-- no translation found for mobile_data_temp_using (5211002380149434155) -->
-    <skip />
+    <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"已暫時連線"</string>
+    <string name="mobile_data_temp_using" msgid="5211002380149434155">"暫時使用 <xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
     <string name="mobile_data_no_connection" msgid="905897142426974030">"沒有連線"</string>
     <string name="mobile_data_off_summary" msgid="1884248776904165539">"不會使用流動數據自動連線"</string>
     <string name="mobile_data_disable_title" msgid="8438714772256088913">"要關閉流動數據嗎？"</string>
@@ -4761,7 +4764,8 @@
     <string name="tare_balances" msgid="731881382594747961">"可用電量"</string>
     <string name="tare_consumption_limits" msgid="3230949387874396382">"消耗量限制"</string>
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"初始消耗量限制"</string>
-    <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"消耗量上限"</string>
+    <string name="tare_min_consumption_limit" msgid="3293145670921755789">"消耗量下限"</string>
+    <string name="tare_max_consumption_limit" msgid="8335700580111808823">"消耗量上限"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"修飾符"</string>
     <string name="tare_actions_ctp" msgid="5110104015354916401">"行動 (生產成本)"</string>
     <string name="tare_actions_base_price" msgid="3300967942666376589">"行動 (基本價格)"</string>
